--- a/chars_book/index.html
+++ b/chars_book/index.html
@@ -191,7 +191,7 @@
 <div id="header">
 <h1 class="title">百炼为战全人物解析</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-04-20</em></p>
+<p class="date"><em>更新时间：2022-04-29</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -199,6 +199,12 @@
 <h2><span class="header-section-number">1.1</span> 更新日志<a href="index.html#更新日志" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>（只包含主要的更新，不含小修改）</em></p>
 <ul>
+<li>2022年4月29日：
+<ul>
+<li>修正<a href="术语与打法.html#侧闪反击">侧闪反击</a></li>
+<li>重写<a href="战术系.html#战擎">战擎</a>、<a href="科技系.html#天火">天火</a>、<a href="战士系.html#亡灵天尊">亡灵天尊</a>、<a href="爆破系.html#飞过山">飞过山</a></li>
+<li>调整<a href="战术系.html#战威">战威</a>（加入震荡波*4的控气协同玩法）</li>
+</ul></li>
 <li>2022年4月20日：修订<a href="战士系.html#阿尔茜">阿尔茜</a>、<a href="侦查系.html#路障">路障</a>、<a href="战术系.html#暗黑擎天柱">暗黑擎天柱</a>和G1铁皮S2躲法。</li>
 <li>2022年4月18日：
 <ul>
@@ -212,7 +218,9 @@
 <div id="更新预告" class="section level2 hasAnchor" number="1.2">
 <h2><span class="header-section-number">1.2</span> 更新预告<a href="index.html#更新预告" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
-<li>2022年4月：修正一些写得比较简略的早期角色。更新一些后续调整过的角色如天火。</li>
+<li>修正一些写得比较简略的早期角色。更新一些后续调整过的角色如天火。</li>
+<li>协同部分将逐步修改为只写<strong>受益</strong>和双向型，即“当前角色从其他角色得到的协同”，<strong>不再包含授益</strong>，即“当前角色给其他角色的协同”（这些写在对应角色的受益协同中）。默认为受益，双向的特别标注</li>
+<li>加入每个类别的技能关键点统计，例如战术系有7人可破甲，6人可施加DOT，等等。</li>
 </ul>
 </div>
 <div id="前言" class="section level2 hasAnchor" number="1.3">
