--- a/chars_book/侦查系.html
+++ b/chars_book/侦查系.html
@@ -221,6 +221,7 @@
 <ul>
 <li>剑圣：这时就幸亏风刃是侦查了，不然四个剑圣有三个战士，很难组队。</li>
 <li>搭配横炮时，开局获得一些能量。</li>
+<li>亡灵天尊：风刃剑刃攻击获得的能量+2~8%</li>
 </ul>
 </div>
 <div id="短板-25" class="section level4 hasAnchor" number="6.1.1.4">
@@ -230,12 +231,12 @@
 </div>
 <div id="推荐打法-25" class="section level3 hasAnchor" number="6.1.2">
 <h3><span class="header-section-number">6.1.2</span> 推荐打法<a href="侦查系.html#推荐打法-25" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-22" class="section level4 hasAnchor" number="6.1.2.1">
-<h4><span class="header-section-number">6.1.2.1</span> 短战斗<a href="侦查系.html#短战斗-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-23" class="section level4 hasAnchor" number="6.1.2.1">
+<h4><span class="header-section-number">6.1.2.1</span> 短战斗<a href="侦查系.html#短战斗-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战缠斗配合重击进行强攻，S2输出。</p>
 </div>
-<div id="长战斗-22" class="section level4 hasAnchor" number="6.1.2.2">
-<h4><span class="header-section-number">6.1.2.2</span> 长战斗<a href="侦查系.html#长战斗-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-23" class="section level4 hasAnchor" number="6.1.2.2">
+<h4><span class="header-section-number">6.1.2.2</span> 长战斗<a href="侦查系.html#长战斗-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>与短战斗打法大体相同，保护自身安全的前提下还是采用近战为主。</p>
 </div>
 </div>
@@ -289,12 +290,12 @@
 <h3><span class="header-section-number">6.2.2</span> 推荐打法<a href="侦查系.html#推荐打法-26" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>路障的逆火虽然是他的标志性debuff，但电脑对手的思路清奇——既不会因为处于逆火状态就刻意不放招，也不会因为你想等着逆火伤害就乖乖给你放招。路障的逆火也不像蝎子，层数多了有触发逆火伤害和过期晕点/震击这三种想象空间，所以施加了逆火之后，要放平心态，就当它不存在，正常打。</p>
 <p>但这不表示就完全可以不用在意施加逆火，事实上，逆火和S2之间是可以互补的。在长战斗过程中，路障核心的思路是通过S2偷气，将自己的能量稳定在一格多，再反复攒出S2同时保证输出和控气。这个过程并不见得总是称心如意，例如对方先于你放掉了S技，自己一个S2下去没偷到多少气，双方都回到半格不到的初始状态。这时在点枪牵制的过程中如果对方露出破绽，我建议就点上三枪搏多几层逆火先，而不是两枪加5连，因为这样打对方很有可能在你2格气之前到达S2，很多人的S2就算骗出来也是有一定危险性的。路障最舒服的时候就是连招攒满S2的时候对方也刚刚过2格气，但立马就会被偷走，没有机会带着S2自由行动。</p>
-<div id="短战斗-23" class="section level4 hasAnchor" number="6.2.2.1">
-<h4><span class="header-section-number">6.2.2.1</span> 短战斗<a href="侦查系.html#短战斗-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-24" class="section level4 hasAnchor" number="6.2.2.1">
+<h4><span class="header-section-number">6.2.2.1</span> 短战斗<a href="侦查系.html#短战斗-24" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>因为有倒地规避所以打法上可以十分强势，因为重击是远程，击倒后可以前冲压起身。围绕S2打输出。</p>
 </div>
-<div id="长战斗-23" class="section level4 hasAnchor" number="6.2.2.2">
-<h4><span class="header-section-number">6.2.2.2</span> 长战斗<a href="侦查系.html#长战斗-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-24" class="section level4 hasAnchor" number="6.2.2.2">
+<h4><span class="header-section-number">6.2.2.2</span> 长战斗<a href="侦查系.html#长战斗-24" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>远近结合（放风筝+侧闪反击），加强点枪牵制，保证经常施加逆火，再用骗招获得输出。S2依然是主要的手段。</p>
 </div>
 </div>
@@ -358,12 +359,12 @@
 <div id="推荐打法-27" class="section level3 hasAnchor" number="6.3.2">
 <h3><span class="header-section-number">6.3.2</span> 推荐打法<a href="侦查系.html#推荐打法-27" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>横炮的连击数多（普攻7连，S技打击数都不少，加上有连晕），所以开启追星者精通会很受益。</p>
-<div id="短战斗-24" class="section level4 hasAnchor" number="6.3.2.1">
-<h4><span class="header-section-number">6.3.2.1</span> 短战斗<a href="侦查系.html#短战斗-24" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-25" class="section level4 hasAnchor" number="6.3.2.1">
+<h4><span class="header-section-number">6.3.2.1</span> 短战斗<a href="侦查系.html#短战斗-25" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>如果没觉醒，就先在远程相持中躲子弹加气，如果觉醒了就尽快用S1打中对方搏击晕，再通过连晕，让战斗尽早结束。</p>
 </div>
-<div id="长战斗-24" class="section level4 hasAnchor" number="6.3.2.2">
-<h4><span class="header-section-number">6.3.2.2</span> 长战斗<a href="侦查系.html#长战斗-24" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-25" class="section level4 hasAnchor" number="6.3.2.2">
+<h4><span class="header-section-number">6.3.2.2</span> 长战斗<a href="侦查系.html#长战斗-25" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>利用好招牌和远程相持尽早的打出S2。然后靠侧闪反击和近战压制打法，把暴击率堆高。长战斗因为有骗招的压力，所以不宜使用连晕战术，否则电脑的气很容易红（如果特别喜欢玩晕人的角色如救护车、铁皮、喷气机和横炮，建议砸钱把抑制器精通升高，这样眩晕的对手能量功率会降低）。S2是比较稳妥的方案。面对buff比较多的对手，可战略性使用S3。</p>
 </div>
 </div>
@@ -387,7 +388,7 @@
 <li>后闪时开始充近战buff，最多10层，充能时有概率规避攻击，充能途中被击中/出规避或者警车主动前冲则打断充能，在6秒内警车拥有近战buff。</li>
 <li>警车的技能中没有写明，但他的远程小枪是有概率晕的。根据扒出来的数据显示，平时一梭子弹里的第一发有10%的概率晕1.5秒，充能时开枪则概率上升到80%。</li>
 <li>S1：这应该是游戏中价值最高的S1之一，能与之抗衡的只有震荡波和斗擎。因为此招命中会迅速地削减对方大量能量，5阶的警车一次砍掉对方36.4%，对方气红的危急时刻可以迅速变成只剩S1。</li>
-<li>S2：在亡灵天尊S1出来之前，警车的S2一直被认为是游戏中最难躲闪的大招。出招动作阴，全屏抓人，侧闪无效，伤害爆表，电脑的警车冷不丁给你来个S2很可能一招把你打回解放前。玩家一般更钟意S1控场，S2的应用场合不多，例如可以用来打通天晓，堆满对方10层物理后一个S2打出高伤害。</li>
+<li>S2：在亡灵天尊S1出来之前，警车的S2一直被认为是游戏中最难躲闪的大招。出招动作阴，全屏抓人，侧闪无效，伤害爆表，电脑的警车冷不丁给你来个S2很可能一招把你打回解放前。玩家一般更钟意S1控场，S2的应用场合不多，例如可以用来打通天晓，堆满对方10层物理后一个S2打出高伤害。另外，这个技能可以触发小黄蜂的近战规避，要小心<a href="#fn7" class="footnote-ref" id="fnref7"><sup>7</sup></a>。</li>
 <li>S3：跟优秀的S1/S2比没有太多用武之地。能量锁定虽然有16秒，但在动画中就消耗了不少时间。但有时也会因为躲在屏幕一边打相持没找到机会连S1或者S2，充气又太快到了S3，也不失为一种放心输出的机会。</li>
 </ul>
 </div>
@@ -467,12 +468,12 @@
 <div id="推荐打法-29" class="section level3 hasAnchor" number="6.5.2">
 <h3><span class="header-section-number">6.5.2</span> 推荐打法<a href="侦查系.html#推荐打法-29" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>侧闪后闪是游戏里走位的家常便饭，平时不要刻意改变走位习惯，正常获取规避和暴击为好。</p>
-<div id="短战斗-25" class="section level4 hasAnchor" number="6.5.2.1">
-<h4><span class="header-section-number">6.5.2.1</span> 短战斗<a href="侦查系.html#短战斗-25" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-26" class="section level4 hasAnchor" number="6.5.2.1">
+<h4><span class="header-section-number">6.5.2.1</span> 短战斗<a href="侦查系.html#短战斗-26" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>无论是否觉醒，小黄蜂都是近身打法为主，但适当的点枪牵制和侧闪反击能攒到暴击加成。S1和S2都可以做为主要的输出手段，只是用S1的时候注意要早点放。</p>
 </div>
-<div id="长战斗-25" class="section level4 hasAnchor" number="6.5.2.2">
-<h4><span class="header-section-number">6.5.2.2</span> 长战斗<a href="侦查系.html#长战斗-25" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-26" class="section level4 hasAnchor" number="6.5.2.2">
+<h4><span class="header-section-number">6.5.2.2</span> 长战斗<a href="侦查系.html#长战斗-26" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>觉醒后适合打长战斗，因为气来得快，可以先上S3来20个加成保障输出。身板脆，要尽量保证安全。加气方面，5连打完要比4连一撞的近身时间长。S技的选择可根据对方的气槽来决定。</p>
 </div>
 </div>
@@ -508,6 +509,9 @@
 <div id="协同-29" class="section level4 hasAnchor" number="6.6.1.3">
 <h4><span class="header-section-number">6.6.1.3</span> 协同<a href="侦查系.html#协同-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>反冲与汽车大师和喷气机在一起可以让减益时间延长且不能净化。这种两两隔开一个类别三角阵型，如果不是反冲和喷气机的平庸，本来应该是很好的搭配。</p>
+<ul>
+<li>飞过山：2~8%攻击加成</li>
+</ul>
 </div>
 <div id="短板-30" class="section level4 hasAnchor" number="6.6.1.4">
 <h4><span class="header-section-number">6.6.1.4</span> 短板<a href="侦查系.html#短板-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -521,12 +525,12 @@
 </div>
 <div id="推荐打法-30" class="section level3 hasAnchor" number="6.6.2">
 <h3><span class="header-section-number">6.6.2</span> 推荐打法<a href="侦查系.html#推荐打法-30" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-26" class="section level4 hasAnchor" number="6.6.2.1">
-<h4><span class="header-section-number">6.6.2.1</span> 短战斗<a href="侦查系.html#短战斗-26" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-27" class="section level4 hasAnchor" number="6.6.2.1">
+<h4><span class="header-section-number">6.6.2.1</span> 短战斗<a href="侦查系.html#短战斗-27" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>多用五连而不是四连一重，因为飞脚暴击率高，更容易施加能量流失提升反冲加气的速度，对方的能量流失先不要转震击，而是一路攒到接近三格，这时使用S2施加流血和能量流失后，再找机会打满一格气放S1施加震击，打出高输出。</p>
 </div>
-<div id="长战斗-26" class="section level4 hasAnchor" number="6.6.2.2">
-<h4><span class="header-section-number">6.6.2.2</span> 长战斗<a href="侦查系.html#长战斗-26" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-27" class="section level4 hasAnchor" number="6.6.2.2">
+<h4><span class="header-section-number">6.6.2.2</span> 长战斗<a href="侦查系.html#长战斗-27" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>基本套路参考短战斗。如果要续航就直接充满3格气、打出能量流失、再发S3。反冲的招牌在实战中不宜刻意追求，万一触发了，要利用好对方能量功率降低的特点猛攻。</p>
 </div>
 </div>
@@ -563,7 +567,7 @@
 <h4><span class="header-section-number">6.7.1.2</span> 招牌<a href="侦查系.html#招牌-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>这是一个面面俱到的神奇招牌：</p>
 <ul>
-<li>首先是阻止对方触发能力<strong>的效果</strong>。具体说是能力会触发，但是不起效果。比如黄豹抢在声波之前满一格气，声波有护盾也不能反弹子弹。不能阻止黄蜂的复活，但是复活中不会回血。震天尊的白球是不能阻止他无敌的。其他大部分能力如回血、DOT都是可以阻止的。</li>
+<li>首先是阻止对方触发能力<strong>的效果</strong>。具体来说，就算能力图标会出现，但是不起效果，比如声波有护盾也不能反弹子弹。不能阻止黄蜂的复活，但是复活中不会回血。震天尊的白球是不能阻止他无敌的。其他大部分能力如回血、DOT都是可以阻止的。</li>
 <li>其次是招牌过程中打穿对手所有减伤，之前写的是护甲、护盾，但不知道何时改成了只有护甲。总之猩猩引以为傲的抗暴护甲，黄豹一个S2就能保证输出。</li>
 <li>招牌有效期内黄豹的攻击不会被规避，所以连接S技是非常稳的。</li>
 <li>招牌有效期内黄豹自己有概率规避，让黄豹有招牌的时候可以更加莽撞。</li>
@@ -587,12 +591,12 @@
 <div id="推荐打法-31" class="section level3 hasAnchor" number="6.7.2">
 <h3><span class="header-section-number">6.7.2</span> 推荐打法<a href="侦查系.html#推荐打法-31" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>没有觉醒的黄豹输出和控场差太多，建议放一放。</p>
-<div id="短战斗-27" class="section level4 hasAnchor" number="6.7.2.1">
-<h4><span class="header-section-number">6.7.2.1</span> 短战斗<a href="侦查系.html#短战斗-27" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-28" class="section level4 hasAnchor" number="6.7.2.1">
+<h4><span class="header-section-number">6.7.2.1</span> 短战斗<a href="侦查系.html#短战斗-28" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战压制，5连打满不要重击，这样气来得快。第一个S2出来后，利用能量功率的提升，快速再弄一个S1战斗基本上就结束了。如果突袭遇到血纳千，就主要靠S1破盾结束战斗。近距离相持中，也可以直接用重击去怼对方的子弹。</p>
 </div>
-<div id="长战斗-27" class="section level4 hasAnchor" number="6.7.2.2">
-<h4><span class="header-section-number">6.7.2.2</span> 长战斗<a href="侦查系.html#长战斗-27" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-28" class="section level4 hasAnchor" number="6.7.2.2">
+<h4><span class="header-section-number">6.7.2.2</span> 长战斗<a href="侦查系.html#长战斗-28" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>安全起见，还是不要硬闯对方的子弹，保持牵制找机会打连击攒气。如果对方有护甲护盾或者其他减伤手段，S2依然是主要的输出和战略部署方式。面对回血类对手要适时用S1封住。面对加气快的对手要留个心眼，如果自己有两格多气，对方也快红的时候，一定不要贪S2，而是赶紧把第三格气抢到解除危机。</p>
 <p>另外为了最大化输出，连招中气充满了两格最好就把大招连上，利用招牌的时间打穿对方的减伤能力。但是不排除有时在相持过程中错过了招牌的时间，这时就应该把对方的S技骗过后，点一拳马上连S技，利用好对方能量少伤害大的特性。</p>
 </div>
@@ -638,12 +642,12 @@
 </div>
 <div id="推荐打法-32" class="section level3 hasAnchor" number="6.8.2">
 <h3><span class="header-section-number">6.8.2</span> 推荐打法<a href="侦查系.html#推荐打法-32" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-28" class="section level4 hasAnchor" number="6.8.2.1">
-<h4><span class="header-section-number">6.8.2.1</span> 短战斗<a href="侦查系.html#短战斗-28" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-29" class="section level4 hasAnchor" number="6.8.2.1">
+<h4><span class="header-section-number">6.8.2.1</span> 短战斗<a href="侦查系.html#短战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战缠斗堆暴击，配合重击命中后的骗招，不给对方把气攒到很高的机会。围绕S1打晕快速输出。</p>
 </div>
-<div id="长战斗-28" class="section level4 hasAnchor" number="6.8.2.2">
-<h4><span class="header-section-number">6.8.2.2</span> 长战斗<a href="侦查系.html#长战斗-28" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-29" class="section level4 hasAnchor" number="6.8.2.2">
+<h4><span class="header-section-number">6.8.2.2</span> 长战斗<a href="侦查系.html#长战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>长战斗是爵士的特色。别的不用说，先上永久逆火，攒S3的过程注意混乱骗招。之后主要围绕S2打输出，求稳的话就用放风筝的方法打。最好再搭配战擎把攻击力堆高。</p>
 </div>
 </div>
@@ -654,6 +658,12 @@
 
 </div>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="7">
+<li id="fn7"><p>指小黄蜂的玩家要小心，因为规避了第一下，很可能吃第二下！<a href="侦查系.html#fnref7" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
             </section>
 
