--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -536,7 +536,7 @@
 <p>蝎子的血量在战士系高居榜首，在全游戏中也仅次于6个斗士、震天尊与爆威，排名第9。</p>
 <ul>
 <li>毒液充能：一格气后获得一层毒液（经测试，最多堆10层）。蝎子的毒液可谓稳赚不赔的买卖，因为留在自己身上可加攻，一层就20%，如果觉醒，还回血。通过重击或者S2施加到对手身上成为12秒逆火，对方要么出特殊吃伤害，要么不出特殊，2层逆火过期会晕3秒，3层以上逆火过期吃500%的震击伤害。</li>
-<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>简直是太爽。</li>
+<li>S1和S3施加目眩，造成对方远程普攻60%概率打不中，远程特殊100%打不中。控制远程特殊技很恐怖的警车<a href="#fn5" class="footnote-ref" id="fnref5"><sup>5</sup></a>简直是太爽。</li>
 <li>作为战士，近战暴击30~40%的概率流血，强度40到60%，时间4秒。可谓中规中矩。</li>
 </ul>
 </div>
@@ -566,7 +566,7 @@
 <p>长战斗时选择毒液给自己。</p>
 <p>打法一适合有防震击手段的敌人（觉醒猩猩，反冲等）或者血厚但没护甲、抗性的敌人。战术是只用S1，不放重击，一路把毒液堆到10层，用200%的攻击加成打架，输出是有保障的。</p>
 <p>打法二适用于比较难啃的硬骨头，他们因为有护甲、抗性或者护盾，需要施加一定DOT或者逆火伤害来保证输出。初期还是坚决不放重击也不放S1，直接等到第一个S3集满，毒液达到3层。</p>
-<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>。</p>
+<p>现在先骗掉对方特殊技之后，放重击施加三层逆火。我们这时比较一下：五阶蝎子三层逆火挂上去，对方放大招会造成420%的伤害，不放大招会有500%的震击，所以从蝎子的角度讲当然是拖延时间比较好。所以这时就拖延时间，不给对方满一格气的机会，等到震击出来再正常打。如果对方还是得到了气槽（比方他会自己充气），那就这时放出S3，用漫长的动画进一步拖延时间。当然，实在对方要放S技吃逆火也是巨疼的伤害。蝎子的毒上只要了三层，回报就是这么稳<a href="#fn6" class="footnote-ref" id="fnref6"><sup>6</sup></a>。</p>
 </div>
 </div>
 <div id="基地防守-22" class="section level3 hasAnchor" number="5.7.3">
@@ -587,58 +587,69 @@
 <div id="能力-23" class="section level4 hasAnchor" number="5.8.1.1">
 <h4><span class="header-section-number">5.8.1.1</span> 能力<a href="战士系.html#能力-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>完成一套连击，对手规避概率减少20%，作为战士，对侦查系有一定的克制。</li>
-<li>对手能量比自己多时，降对手能量功率20%。正常开局打对方一套连击，我方得到的怒气是少于对方的，但是亡灵天尊打一套，基本上双方的气相同。这是一种动态控气的设定。</li>
-<li>生命降到10%以下时，亡天尊推开对手并获得2格能量。10秒内全身起火，点燃身边的对手。相比震天尊，这个技能显得没有那么神奇，第一这10秒不是完全不死状态，第二这2格能量不是瞬间获得，所以玩家自己用的时候不要太指望。</li>
 <li>泰坦充能
 <ul>
-<li>打中对手加1层充能，觉醒前最多20层；得到一格能量，加5层充能；每层充能加0.5 ~ 1.5%的攻击。</li>
-<li>被击倒时失去5个充能。</li>
+<li>所有攻击打中对手加1层充能，觉醒前最多20层；得到一格能量，加5层充能；每层充能加0.5 ~ 1.5%的攻击。</li>
+<li>被击倒时失去7个充能。</li>
 <li>重击时每个充能加1%的暴击概率。</li>
-<li>觉醒后，充能达到20层或以上时触发招牌，获得进一步加攻，但是格挡熟练度和近战防御力下降。这有点像震天尊的狂怒遗迹（黄球），但不是轻易能切换回去的。</li>
+<li><strong>势不可挡的力量</strong>
+<ul>
+<li>充能达到20层时进入势不可挡的力量状态，此时获得进一步加攻，但是格挡熟练度和近战防御力下降。这有点对标震天尊的狂怒和保存遗迹之间的攻守切换。</li>
+<li>此状态下击中敌人将100%造成一层6秒的流血，不可叠加，但小枪和近战都可刷新，基本上可以保持流血不停。值得搭配深度创伤精通。</li>
+<li>此状态下，敌人如果发动S技，亡灵天尊有30%的概率会出霸体0.95秒。这个技能自己用的话，可以比较任性地前冲压起身，保手残党平安。但是更多的时候，会让电脑的亡灵天尊逃过你的大招（比如盟战Boss）</li>
 </ul></li>
-<li>在触发招牌时击中敌人将100%造成一层6秒的流血，不可叠加，但小枪和近战都可刷新，基本上可以保持流血不停。值得搭配深度创伤的精通。</li>
-<li>触发招牌的状态下，敌人如果发动S技，亡灵天尊有不小的概率会出霸体0.95秒。这个技能自己用的话，可以比较任性地前冲压起身，保手残党平安。但是更多的时候，会让电脑的亡灵天尊逃过你的大招（比如盟战Boss）</li>
+</ul></li>
+<li>近战攻击降低对手规避概率20%，作为战士，对侦查系有一定的克制。但是因为大部分侦查的规避概率大于20%，也不能无脑压制。</li>
+<li>对手能量比自己多时，降对手能量功率10~50%。正常开局打对方一套连击，我方得到的怒气是少于对方的，但是亡灵天尊打一套，基本上双方的气相同。这是一种动态控气的设定，非常有用。</li>
+<li>生命降到10%以下时，亡天尊推开对手并获得2格能量，且10秒内全身起火，点燃身边的对手。相比震天尊的不朽遗迹，这个技能显得没有那么神奇，第一这10秒不是完全不死状态，第二这2格能量不是瞬间获得，所以玩家自己用的时候不要太指望。</li>
 <li>S技：
 <ul>
-<li>S1：60%的概率提升30%的能量功率6秒，消耗10个充能</li>
+<li>S1：60%的概率提升30%的能量功率6秒，消耗10个充能。注意：这个看着是远程，躲法也是远程的S技，可以被近战规避（实测对传奇1的横炮，他出规避的时候连S1，横炮可以连续规避几次加满气还你一个S3！）</li>
 <li>S2：65%的概率提升20%的暴击率12秒，消耗15个充能</li>
-<li>S3：85%的概率施加流血7秒，消耗20个充能</li>
+<li>S3：85%的概率施加40%攻击力的流血7秒，消耗20个充能</li>
 </ul></li>
 </ul>
 <p>官方在发布后可能是根据玩家的实测和抱怨，对亡灵天尊的数值进行了一定的调整，之后我实测过双满的亡灵天尊，真的感觉是一个纯输出的角色，尤其是出招牌后再来一个S2，确实伤害爆表。在整个相对较弱的战士系中，除了蝎子，是可以考虑优先发展的角色。</p>
 </div>
 <div id="招牌-22" class="section level4 hasAnchor" number="5.8.1.2">
 <h4><span class="header-section-number">5.8.1.2</span> 招牌<a href="战士系.html#招牌-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>势不可挡的力量：最大充能提升到40层。势不可挡的力量激活时，加1.9 ~ 80.3%的暴击伤害。没有太大必要讨论是否要觉醒，因为能拿到亡灵天尊的人绝对不会犹豫使用觉醒程序。但觉醒只是对他的攻击数值做了提升，有点像漂移的觉醒。</p>
+<p>没有太大必要讨论是否要觉醒，因为亡灵天尊只能在泰坦币商店买，不能通过开水晶觉醒，所以别犹豫，使用觉醒程序吧。</p>
+<p>招牌叫<strong>愤怒</strong>：最大充能提升到40层。因为上限提升，所以更容易保持在势不可挡的力量状态，加大攻击力。势不可挡的力量激活时，加1.9~80.3%的暴击伤害。</p>
 </div>
 <div id="协同-22" class="section level4 hasAnchor" number="5.8.1.3">
 <h4><span class="header-section-number">5.8.1.3</span> 协同<a href="战士系.html#协同-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>受益：震天尊。开局拥有4~10个充能。经实测，这可以让亡灵天尊最多能攒到50个充能，但是放S技时，震天尊给的10个充能会一次性消耗掉，此后依然是40充能封顶。</li>
-<li>授益：震天尊。震天尊能量比对手多时，+2~5%的暴击率。可以说是补回了震天尊之前被削弱的伤害。</li>
-<li>双向：暗黑擎天柱，雷震。自己比对手能量少时，+2~5%的能量功率</li>
-<li>授益：风刃。剑刃攻击获得的能量+2~8%</li>
-<li>授益：惊天雷，黄蜂勇士。+2~6%护甲穿透。</li>
+<li>愿望（震天尊）。开局拥有4~10个泰坦充能。经实测，这可以让亡灵天尊最多能攒到50个充能，但是放S技时，震天尊给的10个充能会一次性消耗掉，此后依然是40充能封顶。</li>
+<li>门徒（双向：暗黑擎天柱，雷震）。自己比对手能量少时，+2~5%的能量功率</li>
 </ul>
 </div>
 <div id="短板-23" class="section level4 hasAnchor" number="5.8.1.4">
 <h4><span class="header-section-number">5.8.1.4</span> 短板<a href="战士系.html#短板-23" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p><em>其实亡灵天尊还是有独特玩法和实力的。以下与其说是短板，不如说是因为比预期实力要弱形成的吐槽。</em></p>
 <p>如果不考虑无关痛痒的饿鲨，亡灵天尊是作为Kabam真正意义上的“亲儿子”出场的原创角色，其获取的难度之大，理应让他站在食物链的最顶端，至少与<a href="爆破系.html#震天尊">震天尊</a>比肩，毕竟这是一个泰坦和震天尊进行火种融合后的产物嘛！然而先不说他没有震天尊的自动加气和10秒不死金身，他的类别就已然让他矮了一截：他被安排进了游戏中整体最弱的战士系……技能看起来比较复杂，但进攻的核心依然是围绕连击、流血与暴击，这与战士系的代表人物漂移有相似之处。而他作为战士系，引以为傲的流血技能也被上游的斗士系克得死死。尤其是连小枪和普通近战都100%刷新流血时间，高觉醒的猩猩站着不动让亡灵天尊打，也只是越打血越多——玩家实测中，一只满锻猩猩站着不动让故事终章的亡灵天尊Boss打了2000多下，还是满血！（据说后续经过调整后似乎没有这个问题了，具体没太注意）</p>
-<p>三个S技并无什么特别功能，在觉醒前，发动S技的时候可能会把亡灵天尊从颠覆力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。虽然有概率性的霸体能保命，却没有震天尊傲视群雄的吸血续航和天然加气。</p>
+<p>三个S技并无什么特别功能，在觉醒前，发动S技的时候可能会把亡灵天尊从势不可挡的力量状态切换为普通状态。觉醒之后因为很容易顶到40个满充能，此时即便放S3也不会少于20个充能了（除非被击倒再减5个）。也就是说亡灵天尊只要觉醒，进入战斗后很快就变得攻强守弱，而不是像震天尊会反复切换攻守。虽然有概率性的霸体能保命，却没有震天尊傲视群雄的吸血续航和天然加气。</p>
 </div>
 </div>
 <div id="推荐打法-23" class="section level3 hasAnchor" number="5.8.2">
 <h3><span class="header-section-number">5.8.2</span> 推荐打法<a href="战士系.html#推荐打法-23" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>因为亡灵天尊在放S技会丢失相当数量的充能，可能会使得状态来回切换。开局一般两个七连击可以满一格气，这时是19个充能，要再摸一下才能切换状态，然后放S1的话丢10个，状态又切换回来了。不过因为还剩10个，以及S1之后能量功率的提升，下一次到S1的时候很可能就不止20个充能了。所以如果保持不被击倒的话，充能总体上是越打越多的，不用特别纠结。</p>
+<div id="短战斗-22" class="section level4 hasAnchor" number="5.8.2.1">
+<h4><span class="header-section-number">5.8.2.1</span> 短战斗<a href="战士系.html#短战斗-22" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于进入势不可挡的力量会让他攻强守弱，连格挡伤害都更高，亡灵天尊在使用时要保护好自己，但由于输出很高，结束战斗也快。</p>
+<p>短战斗优先选择S2，因为攒满两格能量本身已经有10个充能，再加上中间使用的连击，轻轻松松20层以上，这时一个S2下去已经伤害很可观了。</p>
+</div>
+</div>
+<div id="长战斗-22" class="section level3 hasAnchor" number="5.8.3">
+<h3><span class="header-section-number">5.8.3</span> 长战斗<a href="战士系.html#长战斗-22" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>长战斗可以用好能量控制的能力，频繁使用S1放空自己控制对方能量</p>
 <p>推荐按漂移这种标准的堆连击、少用重击的打法，短战斗围绕S1快速获得能量（频繁放空气槽，也能利用到动态控气的能力）。长战斗可以用S2加一些伤害。S3纯鸡肋，不需要使用。</p>
 </div>
-<div id="基地防守-23" class="section level3 hasAnchor" number="5.8.3">
-<h3><span class="header-section-number">5.8.3</span> 基地防守<a href="战士系.html#基地防守-23" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="基地防守-23" class="section level3 hasAnchor" number="5.8.4">
+<h3><span class="header-section-number">5.8.4</span> 基地防守<a href="战士系.html#基地防守-23" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>由于亡灵天尊的S1相当难闪掉，所以配合超导体1000的S1破防，可以给对方造成不小的麻烦。</p>
 </div>
-<div id="故事boss策略" class="section level3 hasAnchor" number="5.8.4">
-<h3><span class="header-section-number">5.8.4</span> 故事Boss策略<a href="战士系.html#故事boss策略" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="故事boss策略" class="section level3 hasAnchor" number="5.8.5">
+<h3><span class="header-section-number">5.8.5</span> 故事Boss策略<a href="战士系.html#故事boss策略" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>此部分内容搬运到<a href="#Boss版亡灵天尊策略">这里</a>。</p>
 <!--/Note-->
 </div>
@@ -703,9 +714,9 @@
 </div>
 <div class="footnotes">
 <hr />
-<ol start="3">
-<li id="fn3"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref3" class="footnote-back">↩︎</a></p></li>
-<li id="fn4"><p>只怕惊天雷<a href="战士系.html#fnref4" class="footnote-back">↩︎</a></p></li>
+<ol start="5">
+<li id="fn5"><p>可见警车的特殊技虽然是用近战的方式躲，依然是判定为远程攻击的<a href="战士系.html#fnref5" class="footnote-back">↩︎</a></p></li>
+<li id="fn6"><p>只怕惊天雷<a href="战士系.html#fnref6" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
