--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -317,7 +317,12 @@
 </div>
 <div id="协同-10" class="section level4 hasAnchor" number="4.3.1.3">
 <h4><span class="header-section-number">4.3.1.3</span> 协同<a href="斗士系.html#协同-10" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>可能是因为汽车大师输出太强，所以自己不但没有斗士们的护甲能力，连协同中都没有友军为他提供护甲。他与喷气机搭配时，S技有概率击晕。与喷气机或反冲搭配时，减益时间+40%且不能被净化。</p>
+<p>可能是因为汽车大师输出太强，所以自己不但没有斗士们的护甲能力，连协同中都没有友军为他提供护甲。</p>
+<ul>
+<li>喷气机：S技有概率击晕。</li>
+<li>喷气机、反冲：减益时间+40%且不能被净化。</li>
+<li>飞过山：2~8%攻击加成</li>
+</ul>
 </div>
 <div id="短板-10" class="section level4 hasAnchor" number="4.3.1.4">
 <h4><span class="header-section-number">4.3.1.4</span> 短板<a href="斗士系.html#短板-10" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -499,7 +504,7 @@
 <!--Note-->
 <div id="特点分析-14" class="section level3 hasAnchor" number="4.7.1">
 <h3><span class="header-section-number">4.7.1</span> 特点分析<a href="斗士系.html#特点分析-14" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>在官方宣布“不再发布新机器人”时，坊间盛传Kabam失去了孩之宝的版权<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>。没想到在2019年4月的二周年庆时，Kabam发布了新的挑战任务（地图与之前小黄蜂发布时的相同），并且Boss是惊天雷不说，完成任意难度的挑战都能获得惊天雷（2~4星）。</p>
+<p>在官方宣布“不再发布新机器人”时，坊间盛传Kabam失去了孩之宝的版权<a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>。没想到在2019年4月的二周年庆时，Kabam发布了新的挑战任务（地图与之前小黄蜂发布时的相同），并且Boss是惊天雷不说，完成任意难度的挑战都能获得惊天雷（2~4星）。</p>
 <p>虽然惊天雷是斗士让人有点费解，但是这个“红蜘蛛重涂”自一登场就让人觉得有点霸气外露。</p>
 <p>在泰坦货币商店中惊天雷的价格是17万。</p>
 <div id="能力-14" class="section level4 hasAnchor" number="4.7.1.1">
@@ -536,8 +541,9 @@
 <h4><span class="header-section-number">4.7.1.3</span> 协同<a href="斗士系.html#协同-13" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>惊天雷的协同主要是授益他人：</p>
 <ul>
-<li>搭配红蜘蛛/喷气机时，提升队中霸天虎成员的远程攻击的伤害与护甲穿透力。</li>
-<li>搭配红蜘蛛/喷气机/碾碎器/狂飙/黄蜂勇士/风刃/天火时，加5~25%的规避克制。</li>
+<li>双向：搭配红蜘蛛/闹翻天/喷气机/挽歌时，提升队中霸天虎成员的远程攻击的伤害与护甲穿透力。</li>
+<li>双向：搭配红蜘蛛/喷气机/碾碎器/狂飙/黄蜂勇士/风刃/天火时，+7~25%的规避克制。</li>
+<li>亡灵天尊：+2~6%护甲穿透。</li>
 </ul>
 </div>
 <div id="短板-14" class="section level4 hasAnchor" number="4.7.1.4">
@@ -594,14 +600,18 @@
 </div>
 <div id="招牌-14" class="section level4 hasAnchor" number="4.8.1.2">
 <h4><span class="header-section-number">4.8.1.2</span> 招牌<a href="斗士系.html#招牌-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。从设计上看这是又一个电脑受益巨大的招牌，毕竟玩家要高觉醒不容易，而玩家挨打也少，不可能到了3个血量档位就开始主动挨打。而电脑……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>。</p>
+<p>在血量降到75%，50%和25%的时候，铁皮获得近战反伤的能力7.5秒。此时敌人每一次近战打击铁皮，铁皮有概率（16-90%）对敌人造成75%的伤害。和犀牛，碎骨魔的反伤不同，铁皮的反伤不是DOT而是直接伤害，不能被净化。</p>
+<p>从设计上看这是又一个电脑受益巨大，玩家基本上用不到的招牌，毕竟1、玩家要高觉醒不容易；2、玩家不希望挨打；3、谁愿意到了3个血量档位还主动挨打？</p>
+<p>有人也许会说，这种招牌是不是可以让电脑因为怕反伤而手下留情，从而起到保命的作用？事实上在铁皮月的展示任务最后一周，我体验了一下满觉醒的铁皮，发现电脑才不管你有没有出招牌，就算反伤到死，也根本不会停手！</p>
+<p>而电脑一旦高觉醒……比方说盟战高难度，攻击力巨大，再配一个计时类的模块，不允许玩家到了3个血量档位时耐心等7.5秒，那就比较麻烦了<a href="#fn4" class="footnote-ref" id="fnref4"><sup>4</sup></a>。</p>
 </div>
 <div id="协同-14" class="section level4 hasAnchor" number="4.8.1.3">
 <h4><span class="header-section-number">4.8.1.3</span> 协同<a href="斗士系.html#协同-14" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>挽歌，闹翻天（相互）：加攻击2- 8%。这协同就是新人物光环啊。</li>
-<li>警车（相互）：对抗霸天虎时加攻2-12%，然而实际应用到组队的时候写着加攻90%，战斗中也确实如此！</li>
+<li>挽歌，闹翻天（相互）：加攻击2~8%。这协同就是新人物光环啊。</li>
+<li>警车（相互）：对抗霸天虎时加攻2~12%，然而实际应用到组队的时候写着加攻90%，战斗中也确实如此（仅限三星铁皮，应该是个bug）！</li>
 </ul>
+<p>铁皮的协同真的是比较可怜，没有人专门给他授益。</p>
 </div>
 <div id="短板-15" class="section level4 hasAnchor" number="4.8.1.4">
 <h4><span class="header-section-number">4.8.1.4</span> 短板<a href="斗士系.html#短板-15" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -630,9 +640,9 @@
 </div>
 <div class="footnotes">
 <hr />
-<ol start="1">
-<li id="fn1"><p>我也多次提到了这个消息，传来传去，加上卡邦很长时间都没怎么投入开发百炼，以至于很多人都信了。事实上，就算是出一个重涂的角色也是需要版权的。直到2022年出了G1铁皮和补天士，也推翻了“没版权，所以只能出重涂”这个说法<a href="斗士系.html#fnref1" class="footnote-back">↩︎</a></p></li>
-<li id="fn2"><p>事实上2022年4月14日上线的特殊任务里面的铁皮带了修复计时模块，配合他厚厚的护甲，反复修复到血量档位以上，反复触发招牌，让人非常头疼。<a href="斗士系.html#fnref2" class="footnote-back">↩︎</a></p></li>
+<ol start="3">
+<li id="fn3"><p>我也多次提到了这个消息，传来传去，加上卡邦很长时间都没怎么投入开发百炼，以至于很多人都信了。事实上，就算是出一个重涂的角色也是需要版权的。直到2022年出了G1铁皮和补天士，也推翻了“没版权，所以只能出重涂”这个说法<a href="斗士系.html#fnref3" class="footnote-back">↩︎</a></p></li>
+<li id="fn4"><p>事实上2022年4月14日上线的特殊任务里面的铁皮带了修复计时模块，配合他厚厚的护甲，反复修复到血量档位以上，反复触发招牌，让人非常头疼。<a href="斗士系.html#fnref4" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
             </section>
