--- a/chars_book/术语与打法.html
+++ b/chars_book/术语与打法.html
@@ -231,8 +231,8 @@
 <h2><span class="header-section-number">2.4</span> 侧闪反击<a href="术语与打法.html#侧闪反击" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>在上述点枪过程中，预测电脑的前冲，侧闪闪过电脑的前冲后进行反击。</li>
-<li>要领：平时侧闪时机要略早一点，拉出空档“请君入瓮”，等电脑冲到面前时侧闪差不多结束，这样便可马上还击。如果因为距离或者别的远程，在闪过前冲反击可能被电脑后续近战击中，则再做一次后闪（注意好节奏），如果面对汽车大师，黄豹，钢锁这些攻击范围长的，可能还要继续后闪撤退，不要贸然反击。</li>
-<li>注意：有时电脑在超远距离发起点枪前冲，例如你一个近战重击电脑后闪，你重击返回时电脑点两枪出来并前冲，此时如果闪掉电脑的点枪，再侧闪时是会被前冲打中的（这种被称为电脑的“拐弯前冲”），这样的套路经常坑到玩家，这时要在侧闪后立即后闪，一般能脱身。</li>
+<li>要领：侧闪时机要略早一点，拉出空档“请君入瓮”，等电脑冲到面前时侧闪差不多结束，这样便可复用对方前冲的收招硬直进行还击。如果闪得太晚，虽然能闪过前冲，但等你按拳反击的时候电脑下一次近战攻击已经出判定了，就会先击中你。这时再做一次后闪可以躲开，但如果马上回击，有一定的可能还是被电脑抢先（汽车大师，黄豹，钢锁这些攻击范围长的）。</li>
+<li>注意：有时电脑在超远距离发起点枪前冲，例如你一个近战重击电脑后闪，你重击返回时电脑点两枪出来并前冲，此时侧闪电脑的点枪，是会被前冲打中的（这种被称为电脑的“拐弯前冲”），并且按防御都来不及，这样的套路经常坑到玩家，这时要在侧闪后立即后闪（这个游戏按闪避到闪避有效的时间，要短于按防御到防御判定出来的时间），一般能脱身。</li>
 </ul>
 </div>
 <div id="放风筝" class="section level2 hasAnchor" number="2.5">
