--- a/chars_book/科技系.html
+++ b/chars_book/科技系.html
@@ -226,12 +226,12 @@
 </div>
 <div id="推荐打法-33" class="section level3 hasAnchor" number="7.1.2">
 <h3><span class="header-section-number">7.1.2</span> 推荐打法<a href="科技系.html#推荐打法-33" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-29" class="section level4 hasAnchor" number="7.1.2.1">
-<h4><span class="header-section-number">7.1.2.1</span> 短战斗<a href="科技系.html#短战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-30" class="section level4 hasAnchor" number="7.1.2.1">
+<h4><span class="header-section-number">7.1.2.1</span> 短战斗<a href="科技系.html#短战斗-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>本来之前是说救护车不用上短战斗的，但救护车有一个连晕的能力，如果确定要快速结束战斗的话，只要找机会打出震击，一个S1就可以晕，然后打几个连晕就赢了。</p>
 </div>
-<div id="长战斗-29" class="section level4 hasAnchor" number="7.1.2.2">
-<h4><span class="header-section-number">7.1.2.2</span> 长战斗<a href="科技系.html#长战斗-29" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-30" class="section level4 hasAnchor" number="7.1.2.2">
+<h4><span class="header-section-number">7.1.2.2</span> 长战斗<a href="科技系.html#长战斗-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>救护车的价值就是靠着苟活能力打消耗战，否则50连以下的战斗，同样打爆破，就算用被克的同战力红蜘蛛也消灭得比救护车更快。</p>
 <p>半血以上的时候先靠S3打输出或者连晕搏震击（注意别打红），半血以下找机会重击，对自己相持能力有信心的话，可以等自我诊断差不多回到半血再放S2，这样就能回到超过一半。在血量很危急的时候有S2赶紧放，因为即使裸放，电脑一般都会傻傻冲上来然后被弹开倒地，不会抓S2的空档来欺负你。</p>
 <p>盟战中救护车死了吃一个便宜的单体复活基本就够，这时开场千万不要想当然一个重击，一定要找好机会屈防再搏重击，根据经验，开局电脑防御后面对第一下重击一般都是必中的。重击过后一定要求稳和电脑相持，点枪尽量一枪就跑，由于一次自我诊断的时间长达10秒不能叠加，所以没必要频繁刷新，侧闪反击用打满5连再后闪的方法，不要四连一撞反而被电脑坑了。一般残血开局要一个完整的自我诊断配合途中普攻的能量才能等到S2，放完S2才不会被一枪点死，所以开局需要特别的耐心。当然，如果开局不利被摸死了……就赶紧暂停无耻地杀后台重来，因为是残血，扣一半血又如何？</p>
@@ -291,12 +291,12 @@
 <div id="推荐打法-34" class="section level3 hasAnchor" number="7.2.2">
 <h3><span class="header-section-number">7.2.2</span> 推荐打法<a href="科技系.html#推荐打法-34" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>未觉醒到10级的幻影除非真没人可用，否则建议雪藏。</p>
-<div id="短战斗-30" class="section level4 hasAnchor" number="7.2.2.1">
-<h4><span class="header-section-number">7.2.2.1</span> 短战斗<a href="科技系.html#短战斗-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-31" class="section level4 hasAnchor" number="7.2.2.1">
+<h4><span class="header-section-number">7.2.2.1</span> 短战斗<a href="科技系.html#短战斗-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>上来走近战套路，堆到S2后打连晕，如果一串连晕加S1对方还没死的话，用小枪加骗招把气控住，再用标准牵制型打法解决战斗。</p>
 </div>
-<div id="长战斗-30" class="section level4 hasAnchor" number="7.2.2.2">
-<h4><span class="header-section-number">7.2.2.2</span> 长战斗<a href="科技系.html#长战斗-30" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-31" class="section level4 hasAnchor" number="7.2.2.2">
+<h4><span class="header-section-number">7.2.2.2</span> 长战斗<a href="科技系.html#长战斗-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>幻影主要还是长战斗的心得更多一些。上来利用30%的能量功率先攒出S3，再利用灵巧的闪躲来加攻。如果攻击力没有堆到满意中途被打断回能量模式，还是继续走S3。攻击力堆上去之后，主要还是围绕S1打控气持久战，因为S2的连晕打红加S1收尾有可能无法解除红气警报，那就很危险了。</p>
 </div>
 </div>
@@ -342,12 +342,12 @@
 </div>
 <div id="推荐打法-35" class="section level3 hasAnchor" number="7.3.2">
 <h3><span class="header-section-number">7.3.2</span> 推荐打法<a href="科技系.html#推荐打法-35" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-31" class="section level4 hasAnchor" number="7.3.2.1">
-<h4><span class="header-section-number">7.3.2.1</span> 短战斗<a href="科技系.html#短战斗-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-32" class="section level4 hasAnchor" number="7.3.2.1">
+<h4><span class="header-section-number">7.3.2.1</span> 短战斗<a href="科技系.html#短战斗-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>犀牛典型的短战斗就是用来打气天尊。在天尊狂怒遗迹（黄球）的时候锁能量，并马上前冲压起身，打中的话继续四连一重，循环使用。震天尊起身如果发S技，冲到面前还是来得及侧闪的，要提高警惕。保存遗迹（蓝球）阶段通过流血来增加输出（S2可造成流血，S1驱散对方半血后的勇气精通或者特殊攻击加成造流血）</p>
 </div>
-<div id="长战斗-31" class="section level4 hasAnchor" number="7.3.2.2">
-<h4><span class="header-section-number">7.3.2.2</span> 长战斗<a href="科技系.html#长战斗-31" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-32" class="section level4 hasAnchor" number="7.3.2.2">
+<h4><span class="header-section-number">7.3.2.2</span> 长战斗<a href="科技系.html#长战斗-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于犀牛有能量锁定，所以在敌人的红气警报拉响前再锁都来得及，平时不要过度使用重击，而是加大点枪的相持，提高小枪流血的输出。在长战斗电脑血较多时，建议先用S3作为主要的输出手段，等电脑血量不足75%时再改用S2。</p>
 </div>
 </div>
@@ -400,12 +400,12 @@
 </div>
 <div id="推荐打法-36" class="section level3 hasAnchor" number="7.4.2">
 <h3><span class="header-section-number">7.4.2</span> 推荐打法<a href="科技系.html#推荐打法-36" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-32" class="section level4 hasAnchor" number="7.4.2.1">
-<h4><span class="header-section-number">7.4.2.1</span> 短战斗<a href="科技系.html#短战斗-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-33" class="section level4 hasAnchor" number="7.4.2.1">
+<h4><span class="header-section-number">7.4.2.1</span> 短战斗<a href="科技系.html#短战斗-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于普攻不加气，牵制和侧闪反击这种方式在短战斗意义不大，主要围绕重击打，声波的重击命中虽然被削弱了，但依然不低。由于重击后回弹很小，击倒后有时间上的优势可以前冲压起身，在短战斗中经常是将对手压在墙角择，对方起身时也很容易被骗招。S1的晕点可以加以利用，运气好又晕又漏气，声波打几个来回对方差不多了。</p>
 </div>
-<div id="长战斗-32" class="section level4 hasAnchor" number="7.4.2.2">
-<h4><span class="header-section-number">7.4.2.2</span> 长战斗<a href="科技系.html#长战斗-32" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-33" class="section level4 hasAnchor" number="7.4.2.2">
+<h4><span class="header-section-number">7.4.2.2</span> 长战斗<a href="科技系.html#长战斗-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>长战斗中还是要多求稳，在牵制中找机会杀入近战距离放重击。重击后不要贸然压起身，用节奏的变化用枪点住对手，连续近战屈防再补以重击。S2的循环使用是主要的输出手段，但如果没有机会连S2，一路冲到了S3就立即放掉。</p>
 </div>
 </div>
@@ -467,12 +467,12 @@
 <div id="推荐打法-37" class="section level3 hasAnchor" number="7.5.2">
 <h3><span class="header-section-number">7.5.2</span> 推荐打法<a href="科技系.html#推荐打法-37" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>使用震荡波要吸到充能，并不能完全原地站防不开枪，因为电脑会很聪明地也不开枪，所以要多用一枪骗两枪的方式来勾引对方。但为了吸枪改变走位其实是容易怠误战机的，建议不要刻意吸，而是面对那些天生爱点枪的（天火、惊破天、幻影、阿尔茜）才多吸几发。</p>
-<div id="短战斗-33" class="section level4 hasAnchor" number="7.5.2.1">
-<h4><span class="header-section-number">7.5.2.1</span> 短战斗<a href="科技系.html#短战斗-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-34" class="section level4 hasAnchor" number="7.5.2.1">
+<h4><span class="header-section-number">7.5.2.1</span> 短战斗<a href="科技系.html#短战斗-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>战斗不长的时候采用压迫式打法，攒到S1就放，可以有效地保障输出和控气，大胆压起身，从而快速解决战斗。</p>
 </div>
-<div id="长战斗-33" class="section level4 hasAnchor" number="7.5.2.2">
-<h4><span class="header-section-number">7.5.2.2</span> 长战斗<a href="科技系.html#长战斗-33" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-34" class="section level4 hasAnchor" number="7.5.2.2">
+<h4><span class="header-section-number">7.5.2.2</span> 长战斗<a href="科技系.html#长战斗-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>安全起见，通过远程牵制中攒到充能配合S1。如果没有合适的机会打近战，快过期的充能应该用重击的方式转换成震击，然后在侧闪反击中连S1。</p>
 <p>由于S1过于优秀，他的S2和S3基本上不需要用，一般只用来封回血，例如对付“最后防线修复”这种疯狂回血的模块，在对方血快到修复线之前攒到一个S3，一看到修复出来就马上放。</p>
 </div>
@@ -520,12 +520,12 @@
 </div>
 <div id="推荐打法-38" class="section level3 hasAnchor" number="7.6.2">
 <h3><span class="header-section-number">7.6.2</span> 推荐打法<a href="科技系.html#推荐打法-38" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-34" class="section level4 hasAnchor" number="7.6.2.1">
-<h4><span class="header-section-number">7.6.2.1</span> 短战斗<a href="科技系.html#短战斗-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-35" class="section level4 hasAnchor" number="7.6.2.1">
+<h4><span class="header-section-number">7.6.2.1</span> 短战斗<a href="科技系.html#短战斗-35" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>不要过度干扰对方，杀入近战区域利用四连一重压起身的打法，用S2来打输出。</p>
 </div>
-<div id="长战斗-34" class="section level4 hasAnchor" number="7.6.2.2">
-<h4><span class="header-section-number">7.6.2.2</span> 长战斗<a href="科技系.html#长战斗-34" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-35" class="section level4 hasAnchor" number="7.6.2.2">
+<h4><span class="header-section-number">7.6.2.2</span> 长战斗<a href="科技系.html#长战斗-35" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>用S1循环攒高放大充能后，放风筝结合侧闪，靠震击和S2来杀伤对手。</p>
 </div>
 </div>
@@ -572,12 +572,12 @@
 <div id="推荐打法-39" class="section level3 hasAnchor" number="7.7.2">
 <h3><span class="header-section-number">7.7.2</span> 推荐打法<a href="科技系.html#推荐打法-39" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>只讨论觉醒的“纳米千”。</p>
-<div id="短战斗-35" class="section level4 hasAnchor" number="7.7.2.1">
-<h4><span class="header-section-number">7.7.2.1</span> 短战斗<a href="科技系.html#短战斗-35" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-36" class="section level4 hasAnchor" number="7.7.2.1">
+<h4><span class="header-section-number">7.7.2.1</span> 短战斗<a href="科技系.html#短战斗-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>先找机会堆到三层升级。注意一次重击回来要稍等一会才能完成升级，所以如果重击命中的话，回来点两枪，如果对方没有侧闪就压过去打一套或者屈防四下，再重击。完成三层后再用S1或S2打输出，因为3个S技的震/漏/晕完全是相同参数的（并且震击概率本来就特别高），所以如果攻击升级有两个或者更多，就S2放大伤害，不到两个就多用S1打控制。短战斗基本不要考虑回血，纳米顶住了大部分伤害。</p>
 </div>
-<div id="长战斗-35" class="section level4 hasAnchor" number="7.7.2.2">
-<h4><span class="header-section-number">7.7.2.2</span> 长战斗<a href="科技系.html#长战斗-35" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-36" class="section level4 hasAnchor" number="7.7.2.2">
+<h4><span class="header-section-number">7.7.2.2</span> 长战斗<a href="科技系.html#长战斗-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>如果是75%以上的血开始，就先靠纳米顶住伤害来猛打输出，不要着急回血。战斗过程中关注第一个升级：</p>
 <ul>
 <li>如果运气好刷到能量，则赶紧用S3，一方面是回血，另一方面是让之后的能量来得更快。有三个能量升级时主要围绕S1控场，因为有90%的概率给对方漏气，基本上和警车一样牢牢的控死对方大招，这时就可以更安逸地回血。</li>
@@ -599,40 +599,46 @@
 <!--Note-->
 <div id="特点分析-40" class="section level3 hasAnchor" number="7.8.1">
 <h3><span class="header-section-number">7.8.1</span> 特点分析<a href="科技系.html#特点分析-40" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>官方宣布“不再发布新机器人”时，天火成了这个游戏最后一个角色（除了饿鲨-1000）。天火虽然技能独特，却并没有让玩家特别买账，迅速遭到冷落。</p>
+<p>官方宣布“不再发布新机器人”时，天火成了这个游戏最后一个角色（除了饿鲨-1000）。天火虽然技能独特，却并没有让玩家特别买账，迅速遭到冷落。直到后续进行了一系列调整，才重新被玩家开发出独特的打法。</p>
 <div id="能力-40" class="section level4 hasAnchor" number="7.8.1.1">
 <h4><span class="header-section-number">7.8.1.1</span> 能力<a href="科技系.html#能力-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>招架护盾：类似《街霸3》系列中的Blocking或者《饿狼传说：群狼之证》中的Just Defense。使用方式是最后瞬间及时防御，招架成功天火身上会闪一下护盾，可以招架几乎所有的进攻！招架远程子弹和重炮会弹回去（并且几发小枪过来只要招架第一发，后面按住防御就都能弹回去），招架近战时减少50%的防御伤害，并且会晕住对手。S技也可以招架，但因为对方在S技动作中是无敌的，所以建议招架最后一下。</li>
+<li>招架护盾：类似《街霸3》系列中的Blocking或者《饿狼传说：群狼之证》中的Just Defense。使用方式是最后瞬间及时防御，招架成功天火身上会闪一下护盾，可以招架所有普通攻击和重击！
+<ul>
 <li>招架成功给天火一个充能（最大10层），每层充能提升天火的能量功率5%。</li>
-<li>重击命中消耗一个充能，施加一层震击。</li>
-<li>如果放S技时没有充能，则获得一个。</li>
-<li>S1将全部充能变成远程伤害与射速提升，持续20秒。如果5层或以上充能同时转化，将锁气8秒。</li>
+<li>招架远程子弹和重炮会弹回去。几发小枪过来只要招架第一发，后面按住防御就能全部弹回去，不过只算一个充能</li>
+<li>招架近战普通攻击时减少50%的防御伤害，并且会晕住对手。</li>
+<li>招架近战重击虽然会闪护盾，但还是会被撞倒，不建议尝试。</li>
+<li>S1和S2也可以招架，但因为对方在S技动作中是无敌的，所以不会晕<a href="#fn8" class="footnote-ref" id="fnref8"><sup>8</sup></a>，也不会反弹。只有招架近战S技时会闪护盾，远程不会。</li>
+<li>多段的近战S技在不脱身的前提下只能架一次。例如面对横炮的S1，架第一下是可以的，但如果不后闪脱身，则第二下和第三下不能架（防住第一下后松开防御再试图架第二和三下也是不能成功的）。如果后闪脱身，则第三下的飞脚还可以架一次。</li>
+</ul></li>
+<li>重击命中消耗一个充能，施加一层震击。无充能则无震击。</li>
+<li>如果放S技时没有充能，则获得一个。
+<ul>
+<li>S1将全部充能变成远程伤害（充能越多，伤害越高），并提升射速10%（与充能数无关），持续20秒。如果带着5层或以上的充能放S1，将锁气8秒。实测发现，在这20秒内，如果再攒出一个S1放出去，则不管你身上有没有充能，都会再次触发能量锁定，这个可能是卡邦设定上的疏忽。</li>
 <li>S2将全部充能变成减伤护盾，持续20秒。如果5层或以上充能同时转化，将施加15秒的修复阻止。</li>
 <li>S3将全部充能变成震击。S3结束后再得到3个充能。</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌-39" class="section level4 hasAnchor" number="7.8.1.2">
 <h4><span class="header-section-number">7.8.1.2</span> 招牌<a href="科技系.html#招牌-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>75%血以下时站防1秒能消耗一个充能给自己回血，并净化一个燃烧减益。5级回血2%，100级回血6%</p>
+<p>75%血以下时会提示“伤害控制在线”，此时站防1秒能消耗一个充能给自己回血，并净化一个燃烧减益，一直按住防御会连续回血。5级回血2%，100级回血6%。</p>
+<p>天火的招牌还是非常实用的，把回血做到明处，没有概率，但这也让电脑的天火（尤其是传奇3里面的那只）变得非常皮实。</p>
 </div>
 <div id="协同-39" class="section level4 hasAnchor" number="7.8.1.3">
 <h4><span class="header-section-number">7.8.1.3</span> 协同<a href="科技系.html#协同-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>老朋友：搭配红蜘蛛时，天火的近战招架 <del>有概率</del> 架晕对手的时间延长50%。<del>注意：连特殊技的近战攻击也可能架晕！</del></li>
-<li>护盾大师：搭配恐龙勇士或搅拌者时，招架可以弹开对手并扣气。</li>
+<li>老朋友：搭配红蜘蛛时，天火的近战招架架晕对手的时间延长50%。<del>注意：连特殊技的近战攻击也可能架晕！</del></li>
+<li>护盾大师：搭配恐龙勇士或搅拌者时，招架可以弹开对手并扣气。同时带这两个人，扣气是双倍的，这给天火的控制能力方面提升巨大。</li>
 </ul>
 </div>
 <div id="短板-40" class="section level4 hasAnchor" number="7.8.1.4">
 <h4><span class="header-section-number">7.8.1.4</span> 短板<a href="科技系.html#短板-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>天火除了玩法另类和输出对不起自己的个头外，设计有明显的不合理之处，主要表现在：</p>
-<ul>
-<li>觉醒后近战招架除非有协同能弹开对手，屈防时可能被迫消耗充能来回血，让本来难攒的充能更难保留；</li>
-<li>即使競競业业地不触发招牌攒到了多层充能，前两个S技消耗5个充能的回报（锁气或者修复阻止）也太对不起投入的精力。最终，玩家会发现只有S3才是正道……</li>
-<li>S1之后的射速提升明显是提醒玩家加强对枪，但天火不应该更多等子弹过来吗？</li>
-<li>招牌的诱惑会让人陷入<strong>一边攒充能一边修复、彻底忘了还有输出这回事</strong>的死胡同。</li>
-</ul>
-<p>天火毫无意外地进入了8.0平衡性调整的名单，一同会调整的还有护盾大师协同，但愿能重现曙光。</p>
+<p>天火的玩法很有意思，但是真正要打硬仗根本上不了，主要有几个原因。</p>
+<p>一是输出不够，在科技系里面基本上是在靠拳脚打输出，偶尔能施加一点震击，还取决于有没有充能。</p>
+<p>二是充能的获取和使用，很费脑。如果刻意靠弹小枪去攒，则会严重影响走位和战机；靠五连后马上招架对方的近战并晕住再打去攒会安全一点，但如果想攒多几层，又怕打红了（前提还是对手要很配合每次被打五下都打回头）。充能怎么用也是麻烦事，要发挥S1或S2的额外特性，要消耗5个充能，万一有气没充能，放S技就像白开水，如果不放，那只能一直攒着气到S3。而且觉醒后充能还能用来修复，这种诱惑会让人陷入<strong>一边攒充能一边修复、彻底忘了还有输出这回事</strong>的死胡同。</p>
+<p>三是S1和S2，无论有没有充能，都没什么伤害，但是消耗5个以上的充能就划得来吗？非也——S1之后的射速提升就只有10%，没有幻影和阿尔茜那种“追身”的能力，再说天火的小枪又不能DOT也不能减气，10个充能提升到200%的伤害又能如何，跟对方对枪玩吗？天火反射子弹是反对方子弹伤害的100%，只要对方攻击力高于天火，还不如踏踏实实用反弹打伤害。S2是充能换护盾？其他科技系的护盾都是被动获得（犀牛，声波，录音机），有些更是在最需要的时候自动激活（幻影，千斤顶），这种要用S技才能主动获得的护盾似乎违背了护盾本身的初衷。</p>
 </div>
 <div id="调整-6" class="section level4 hasAnchor" number="7.8.1.5">
 <h4><span class="header-section-number">7.8.1.5</span> 8.0调整<a href="科技系.html#调整-6" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -641,14 +647,15 @@
 </div>
 <div id="推荐打法-40" class="section level3 hasAnchor" number="7.8.2">
 <h3><span class="header-section-number">7.8.2</span> 推荐打法<a href="科技系.html#推荐打法-40" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-36" class="section level4 hasAnchor" number="7.8.2.1">
-<h4><span class="header-section-number">7.8.2.1</span> 短战斗<a href="科技系.html#短战斗-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p><del>由于近战招架的风险回报比太高，主要还是靠远程牵制反弹子弹来攒充能，然后要么随时用重击还给对手，要么攒到S3再放。</del>
-经过8.0的加强，天火也成为了一流的科技人物。由于五连后原地站防电脑往往会近战打回头，结果就是当场晕住，于是天火又可以五连站防。如果电脑不打回头，那无非是侧闪（抓住再来五下）或者大招（躲掉接着打）,总之注意不要打红就好。如此几次，短战斗也差不多结束了。碰到不喜欢近战的角色，那就在远处反弹子弹并且用重击还DOT给对手。</p>
+<div id="短战斗-37" class="section level4 hasAnchor" number="7.8.2.1">
+<h4><span class="header-section-number">7.8.2.1</span> 短战斗<a href="科技系.html#短战斗-37" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>不要刻意反弹子弹，而是围绕近战招架连晕的来打输出：由于五连后电脑往往会近战打回头，天火只要马上按防，可以触发招架当场晕住对方，于是又可以五连，如此循环。如果电脑不打回头，那无非是侧闪（抓住再来五下）或者大招（躲掉接着打），总之注意不要打红就好。如此几次，短战斗也差不多结束了。碰到不喜欢近战的角色，那就在远处反弹子弹并且用重击还DOT给对手。</p>
 </div>
-<div id="长战斗-36" class="section level4 hasAnchor" number="7.8.2.2">
-<h4><span class="header-section-number">7.8.2.2</span> 长战斗<a href="科技系.html#长战斗-36" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>长战斗中合理使用招架在远程中牵制，近战中搏晕点。如果觉醒了，充能还能给自己回血（每次招架成功后继续按住防御触发回血），输出可以围绕S2或者S3来。</p>
+<div id="长战斗-37" class="section level4 hasAnchor" number="7.8.2.2">
+<h4><span class="header-section-number">7.8.2.2</span> 长战斗<a href="科技系.html#长战斗-37" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>前面说的短板制约了天火在长战斗中闪光，所以如果你非要使用天火去打传奇的话，要放弃掉很多不切实际的想法，尽量就平常心去战斗，近战和远程招架都随缘，别太刻意。</p>
+<p>如果你把恐龙勇士和搅拌者都升好练好的话，一定带上他们（至少带一个恐龙吧），因为这样可以更加安心地搞近战循环晕，不怕对方红得快，自己的气也来得快。并且弹开后还可以点两枪再上去打。</p>
+<p>充能就用来回血，血量够了就用于重击DOT。大招就用S3，有护盾大师协同，攒S3没那么难的。每次S3之后还有3个充能接着用。</p>
 </div>
 </div>
 <div id="基地防守-40" class="section level3 hasAnchor" number="7.8.3">
@@ -706,18 +713,24 @@
 </div>
 <div id="推荐打法-41" class="section level3 hasAnchor" number="7.9.2">
 <h3><span class="header-section-number">7.9.2</span> 推荐打法<a href="科技系.html#推荐打法-41" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-37" class="section level4 hasAnchor" number="7.9.2.1">
-<h4><span class="header-section-number">7.9.2.1</span> 短战斗<a href="科技系.html#短战斗-37" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-38" class="section level4 hasAnchor" number="7.9.2.1">
+<h4><span class="header-section-number">7.9.2.1</span> 短战斗<a href="科技系.html#短战斗-38" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战为主，反复围绕S1的能量锁定打出侵略性，对方能量上不来可以连续压制。</p>
 </div>
-<div id="长战斗-37" class="section level4 hasAnchor" number="7.9.2.2">
-<h4><span class="header-section-number">7.9.2.2</span> 长战斗<a href="科技系.html#长战斗-37" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-38" class="section level4 hasAnchor" number="7.9.2.2">
+<h4><span class="header-section-number">7.9.2.2</span> 长战斗<a href="科技系.html#长战斗-38" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>开场攒到3槽气之后骗出对方大招，再放S3，这样保证能偷气到0，从而把能量功率提高。之后因为攒气快，可以围绕S2来打伤害，同时给自己加上护盾，降低长战斗的损耗。</p>
 <!--/Note-->
 
 </div>
 </div>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="8">
+<li id="fn8"><p>之前搭配红蜘蛛的时候可以晕，后来调整了<a href="科技系.html#fnref8" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
             </section>
 
