--- a/chars_book/战术系.html
+++ b/chars_book/战术系.html
@@ -199,23 +199,39 @@
 <!--Note-->
 <div id="特点分析" class="section level3 hasAnchor" number="3.1.1">
 <h3><span class="header-section-number">3.1.1</span> 特点分析<a href="战术系.html#特点分析" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>战擎是所有人第一个拿到的机器人，上手容易，操作顺畅，标准的速攻高输出选手。协同方面，由于有救护车的回血，这个“小强组合”在盟战中是玩家长期追捧的对象。官方也因此有底气采用“水晶开启事件”的方式发布他的5星版本并大肆敛财。</p>
+<p>战擎是所有人第一个拿到的机器人，上手容易，操作顺畅，标准的速攻高输出选手。作为汽车人的领袖，协同方面也有很多亮点，如救护车的回血，让战擎+救护车的“小强组合”长期受到玩家的追捧。官方也因此有底气在当年采用“水晶开启事件”的方式发布他的5星版本并大肆敛财。</p>
+<p>但是作为最早得到的角色，战擎技能的中文翻译一直是错的，官方并没有改正，好在大部分玩家也不是很在意。</p>
 <div id="能力" class="section level4 hasAnchor" number="3.1.1.1">
 <h4><span class="header-section-number">3.1.1.1</span> 能力<a href="战术系.html#能力" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>重击按队友数量获得攻击加成。</li>
-<li>主动防御时，按队友数提升近战护甲。（这一条和上一条在游戏中的翻译都是错的）</li>
-<li>3个特殊技都有不同程度的破甲，S2的输出巨大，短战斗一招制敌，S3能永久破甲配合招牌能力大幅度提高输出。</li>
+<li>发动一次重击时，按队友数量获得攻击加成，是<strong>战擎自己得到攻击加成</strong>，游戏中的中文翻译是错的。</li>
+<li>主动防御时：
+<ul>
+<li>获得一个护甲</li>
+<li>根据队友的数量，增加护甲抵御近战攻击的强度。这个技能指的是<strong>战擎获得护甲的强度</strong>，而非游戏中文翻译说的给队友加护甲</li>
+</ul></li>
+<li>连击数越多，破甲时间持续越长（每多一连击，破甲时间延长1.5%，与级别无关）。这个技能没有得到什么关注，可能也是因为战擎的短战斗只要攒两个S2就基本上结束了，长战斗时一般都会上S3永久破甲。也许只有在超长的战斗中，这个能力可以扩大永久破甲之上叠加的破甲的时间。</li>
+<li>3个特殊技的斧头攻击都可以触发破甲：
+<ul>
+<li>S1后两下是斧头攻击。并且S1之后还可以获得加攻，牺牲的队友越多，加攻越多。</li>
+<li>S2就是三板斧。输出巨大，短战斗一招制敌，S3能永久破甲配合招牌能力大幅度提高输出。</li>
+<li>S3最后一击必然施加破甲，并且是永久破甲。</li>
+</ul></li>
 </ul>
 </div>
 <div id="招牌" class="section level4 hasAnchor" number="3.1.1.2">
 <h4><span class="header-section-number">3.1.1.2</span> 招牌<a href="战术系.html#招牌" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>暴击破甲状态下的对手会造成流血，配合S3的永久破甲（俗称脱衣打法），对付各种对手都有相当稳定的输出保障（除了高觉醒的猩猩），事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士，所以“深度创伤”精通也对他有相当的提升。</p>
+<p>暴击破甲状态下的对手会造成流血，和侦查和战士系不同，战擎这个是出了暴击就100%流血！事实上战擎的流血无论在时间上和强度上都不输那些靠流血吃饭的侦查和战士。配合S3的永久破甲（俗称脱衣打法），再加深度创伤精通，进一步提高输出。</p>
 </div>
 <div id="协同" class="section level4 hasAnchor" number="3.1.1.3">
 <h4><span class="header-section-number">3.1.1.3</span> 协同<a href="战术系.html#协同" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p><em>2022年4月修订中，协同部分改为只写<strong>受益</strong>和双向型，即“当前角色从其他角色得到的协同”，<strong>不再包含授益</strong>，即“当前角色给其他角色的协同”（这些写在对应角色的受益协同中）。默认为受益，双向的特别标注。</em></p>
+<p>战擎作为领袖，协同也很有领袖的样子：</p>
 <ul>
-<li>救护车：重击时随机获得回血，血越少回血概率越高，本来单兵能力就很强的战擎拥有续航能力简直如虎添翼。双救护配战擎的组合更加顽强。</li>
+<li>敌人（声波，汽车大师，战威，震天尊）：加攻击。可能早期机器人设计得比较细致，后期这类<strong>敌人</strong>间的协同都是做成双向的。</li>
+<li>首席医疗官（救护车）。擎天柱变形时（指重击和S3时<a href="#fn1" class="footnote-ref" id="fnref1"><sup>1</sup></a>）随机获得回血（触发回血时，不触发加攻），血越少回血概率越高，最高概率100%（也就是理论上只剩1血时）。本来单兵能力就很强的战擎拥有续航能力简直如虎添翼。实测可以上多个救护车，提高触发回血的概率和回血强度（配四个救护车可以一次出三层回血，回血15%）。</li>
+<li>榜样（小黄蜂）：加护甲</li>
+<li>中尉（爵士、警车）：加护甲和加攻</li>
 </ul>
 </div>
 <div id="短板" class="section level4 hasAnchor" number="3.1.1.4">
@@ -227,16 +243,18 @@
 <h3><span class="header-section-number">3.1.2</span> 推荐打法<a href="战术系.html#推荐打法" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <div id="短战斗" class="section level4 hasAnchor" number="3.1.2.1">
 <h4><span class="header-section-number">3.1.2.1</span> 短战斗<a href="战术系.html#短战斗" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>点枪与侧闪反击结合，围绕S2打输出，运气好一个S2结束战斗。</p>
+<p>点枪与侧闪反击结合，四连后用重击。围绕S2打输出，运气好一个S2结束战斗。</p>
 </div>
 <div id="长战斗" class="section level4 hasAnchor" number="3.1.2.2">
 <h4><span class="header-section-number">3.1.2.2</span> 长战斗<a href="战术系.html#长战斗" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>除了对付猩猩，基本上都可以先S3永久破甲，然后回到短战斗的打法。如果有救护车，切记一次没有触发回血时不要反复尝试重击，要尽量在攻击加成结束后再尝试。</p>
+<p>除了对付猩猩，基本上都可以先S3永久破甲，然后回到短战斗的打法。在出S技前争取用安全的方式出重击加攻，再找机会连S技。</p>
+<p>如果连击数可以保持在很高，可以用S1做输出，否则S2。传奇中曾经有一种打法就是带四个救护车，先把2、3、4星的上去送死<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a>，用于加强战擎的S1伤害。</p>
+<p>如果配合救护车来打长战斗，切记一次没有触发回血时，不要反复尝试重击，要在攻击加成计时结束后再尝试。</p>
 </div>
 </div>
 <div id="基地防守" class="section level3 hasAnchor" number="3.1.3">
 <h3><span class="header-section-number">3.1.3</span> 基地防守<a href="战术系.html#基地防守" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>战擎的AI很弱，基地防守效果一般，<del>加上五星战擎一直没出（出了也是宝），四星的黄金产量不够，</del>不推荐放基地。</p>
+<p>战擎的AI很弱，基地防守效果一般，不推荐放基地。</p>
 <!--/Note-->
 </div>
 </div>
@@ -345,9 +363,11 @@
 <div id="长战斗-2" class="section level4 hasAnchor" number="3.3.2.2">
 <h4><span class="header-section-number">3.3.2.2</span> 长战斗<a href="战术系.html#长战斗-2" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p><del>开始战斗后找机会靠主动防御来堆抗性，堆10层物理抗性比较稳，例如五连击成功不逃跑，而是站防让对方打几下。10层能量抗性很难——你远距离站防，电脑是不会狂开枪的。</del>
-首要任务是堆到10层抗性，因为通天晓在不被驱散和偷走的情况下，抗性总和最大为10，有了10层后对伤害的控制达到最优，S2也得到很大加强。但由于抗性在被打时容易切换，所以一定要有明确的目标：
-- 堆物理：坚持轻攻击结束连击，并且适当地进行一些近战防御（例如五连后马上原地防御）。这适用于对付那些近战很疼的对手。
-- 堆能量：坚持中等攻击结束连击并适当防御一些远程小枪，这种方式更符合玩家的操作习惯（因为大部分玩家都是采用MLLLM和LLLMM来做五连的），防小枪伤害也更低。</p>
+首要任务是堆到10层抗性，因为通天晓在不被驱散和偷走的情况下，抗性总和最大为10，有了10层后对伤害的控制达到最优，S2也得到很大加强。但由于抗性在被打时容易切换，所以一定要有明确的目标：</p>
+<ul>
+<li>堆物理：坚持轻攻击结束连击，并且适当地进行一些近战防御（例如五连后马上原地防御）。这适用于对付那些近战很疼的对手。</li>
+<li>堆能量：坚持中等攻击结束连击并适当防御一些远程小枪，这种方式更符合玩家的操作习惯（因为大部分玩家都是采用MLLLM和LLLMM来做五连的），防小枪伤害也更低。</li>
+</ul>
 <p>堆高或堆满抗性就可以围绕S2打输出了。<del>注意面对有护甲的对手，要等护甲出来再放特殊技比较划算，尤其是猩猩。</del>S2是一锤一炮，相对来说后面的一炮伤害大，所以10层能量抗性放S2是最划算的。不过虽然S2很爽，但带着10层能量抗性吃一套残血大师的5连依然是很疼。所以在实战中还是要根据对手的情况来调整。</p>
 <p>面对汽车大师这样的角色，注意用小枪点掉他的攻击加成，防止瞬间血崩式的翻盘。</p>
 </div>
@@ -462,13 +482,13 @@
 <h4><span class="header-section-number">3.5.1.3</span> 协同<a href="战术系.html#协同-4" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>红蜘蛛能概率性地帮助战威的特殊技击晕对手一次，令减益融合变得简单。但两人均是战术系也使这个协同的价值有所降低。</li>
-<li>震荡波可以使威震天的第二下M攻击有概率（最大40%）降低对手30%的能量功率，该减益可融合。全场减能量30%的对手已经如被阉割的种马，而这个协同的意义还不止于此：一般情况下战威要靠攒出一格气放S1来完成减益融合，这个协同则可以让他一充满紫炮就迅速完成融合开始偷Buff。</li>
+<li>震荡波可以使威震天的第二下M攻击有概率（最大40%）降低对手30%的能量功率，该减益可融合。全场减能量30%的对手已经如被阉割的种马，而这个协同的意义还不止于此：一般情况下战威要靠攒出一格气放S1来完成减益融合，这个协同则可以让他一充满紫炮就迅速完成融合开始偷Buff。有兴趣的玩家在开发多人协同的过程中，曾经尝试过战威带四个震荡波出战，触发三层减能量之后融合，对方已经基本上无法得到能量（打80下才一格气），这也是一种打传奇1和2的思路。</li>
 </ul>
 </div>
 <div id="短板-4" class="section level4 hasAnchor" number="3.5.1.4">
 <h4><span class="header-section-number">3.5.1.4</span> 短板<a href="战术系.html#短板-4" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
-<li>相比战擎，输出来得略慢，需要通减益融合进行战略布局，这时就比较依赖重击的命中率。</li>
+<li>相比战擎，输出来得略慢，需要通过减益融合进行战略布局，这时就比较依赖重击的命中率。</li>
 <li>重炮充能不受自己控制，有时会打乱节奏，例如特殊技击倒后发现只有一发充能炮，打空的话容易让人急于近战刷新。</li>
 </ul>
 </div>
@@ -663,6 +683,13 @@
 
 </div>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="1">
+<li id="fn1"><p>游戏中的翻译为“出击时”显然让人摸不着头脑，其实是因为经典的梗——擎天柱的标志口号就是“Transform and Roll Out!”（汽车人，变形出发！）<a href="战术系.html#fnref1" class="footnote-back">↩︎</a></p></li>
+<li id="fn2"><p>其实5星的也可以上去送死，只是有些人5星救护车也升到可以独当一面的水平了，救护车本来就可以打长战斗，否则全程就战擎一个人<a href="战术系.html#fnref2" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
             </section>
 
