--- a/chars_book/爆破系.html
+++ b/chars_book/爆破系.html
@@ -230,12 +230,12 @@
 <div id="推荐打法-42" class="section level3 hasAnchor" number="8.1.2">
 <h3><span class="header-section-number">8.1.2</span> 推荐打法<a href="爆破系.html#推荐打法-42" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>连晕打法：在铁皮有将近两格气的时候放S1搏到打晕，点两枪再上去打五拳必然又能获得一个S1，如果初始的气很接近两格，二次晕后还可以再两枪五拳攒到一个S1，初始气不多或者对方快红则补上一发重炮。</p>
-<div id="短战斗-38" class="section level4 hasAnchor" number="8.1.2.1">
-<h4><span class="header-section-number">8.1.2.1</span> 短战斗<a href="爆破系.html#短战斗-38" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-39" class="section level4 hasAnchor" number="8.1.2.1">
+<h4><span class="header-section-number">8.1.2.1</span> 短战斗<a href="爆破系.html#短战斗-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>放风筝是铁皮的主旋律，未觉醒的话采用连晕打法基本上可以迅速结束战斗。</p>
 </div>
-<div id="长战斗-38" class="section level4 hasAnchor" number="8.1.2.2">
-<h4><span class="header-section-number">8.1.2.2</span> 长战斗<a href="爆破系.html#长战斗-38" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-39" class="section level4 hasAnchor" number="8.1.2.2">
+<h4><span class="header-section-number">8.1.2.2</span> 长战斗<a href="爆破系.html#长战斗-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>注意放风筝的走位，对枪的位置被压过自己半场时点一枪就侧闪，否则在重击过程中可能吃到对方的子弹。长战斗围绕S2打输出，招牌是锦上添花的功能。如果用S1，要注意别打红对手。</p>
 </div>
 </div>
@@ -275,6 +275,7 @@
 <li>野兽净化自不待言，值得一提的是在很长时间里黄蜂是野兽队里面唯一的原始兽角色，巨无霸们只有搭配他才能获得加攻，直到蝎子的出现才让黄蜂失去了最后的用武之地。</li>
 <li>搭配风刃或红蜘蛛能克制规避，这时S1就有了用武之地。</li>
 <li>搭配搅拌者后黄蜂的重击暴击率提升。</li>
+<li>亡灵天尊：+2~6%护甲穿透。</li>
 </ul>
 </div>
 <div id="短板-43" class="section level4 hasAnchor" number="8.2.1.4">
@@ -284,12 +285,12 @@
 </div>
 <div id="推荐打法-43" class="section level3 hasAnchor" number="8.2.2">
 <h3><span class="header-section-number">8.2.2</span> 推荐打法<a href="爆破系.html#推荐打法-43" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-39" class="section level4 hasAnchor" number="8.2.2.1">
-<h4><span class="header-section-number">8.2.2.1</span> 短战斗<a href="爆破系.html#短战斗-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-40" class="section level4 hasAnchor" number="8.2.2.1">
+<h4><span class="header-section-number">8.2.2.1</span> 短战斗<a href="爆破系.html#短战斗-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>由于黄蜂点中小枪后有抗性减益，所以在远程牵制中尽量找准空档命中两枪再冲上去打，如对方无规避则主要以S2输出。</p>
 </div>
-<div id="长战斗-39" class="section level4 hasAnchor" number="8.2.2.2">
-<h4><span class="header-section-number">8.2.2.2</span> 长战斗<a href="爆破系.html#长战斗-39" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-40" class="section level4 hasAnchor" number="8.2.2.2">
+<h4><span class="header-section-number">8.2.2.2</span> 长战斗<a href="爆破系.html#长战斗-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>半血以上使用牵制和侧闪，半血以下坚决使用放风筝战术，配合S2打输出。</p>
 </div>
 </div>
@@ -340,12 +341,12 @@
 </div>
 <div id="推荐打法-44" class="section level3 hasAnchor" number="8.3.2">
 <h3><span class="header-section-number">8.3.2</span> 推荐打法<a href="爆破系.html#推荐打法-44" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-40" class="section level4 hasAnchor" number="8.3.2.1">
-<h4><span class="header-section-number">8.3.2.1</span> 短战斗<a href="爆破系.html#短战斗-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-41" class="section level4 hasAnchor" number="8.3.2.1">
+<h4><span class="header-section-number">8.3.2.1</span> 短战斗<a href="爆破系.html#短战斗-41" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>换别人上。</p>
 </div>
-<div id="长战斗-40" class="section level4 hasAnchor" number="8.3.2.2">
-<h4><span class="header-section-number">8.3.2.2</span> 长战斗<a href="爆破系.html#长战斗-40" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-41" class="section level4 hasAnchor" number="8.3.2.2">
+<h4><span class="header-section-number">8.3.2.2</span> 长战斗<a href="爆破系.html#长战斗-41" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>如前所述，觉醒了之后多用震荡格挡。例如打完5连马上按防，电脑一还手就肯定被震回去。然后就是S2和S3了，求稳的话把S3憋着等手雷概率出酸液。要不然根本不用等后面6个暴击伤害加成，有6个特殊伤害就放S2。</p>
 </div>
 </div>
@@ -388,12 +389,12 @@
 </div>
 <div id="推荐打法-45" class="section level3 hasAnchor" number="8.4.2">
 <h3><span class="header-section-number">8.4.2</span> 推荐打法<a href="爆破系.html#推荐打法-45" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-41" class="section level4 hasAnchor" number="8.4.2.1">
-<h4><span class="header-section-number">8.4.2.1</span> 短战斗<a href="爆破系.html#短战斗-41" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-42" class="section level4 hasAnchor" number="8.4.2.1">
+<h4><span class="header-section-number">8.4.2.1</span> 短战斗<a href="爆破系.html#短战斗-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战缠斗，如果对手较弱一个S2差不多解决问题，或者围绕着S1和重炮快速解决战斗。</p>
 </div>
-<div id="长战斗-41" class="section level4 hasAnchor" number="8.4.2.2">
-<h4><span class="header-section-number">8.4.2.2</span> 长战斗<a href="爆破系.html#长战斗-41" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-42" class="section level4 hasAnchor" number="8.4.2.2">
+<h4><span class="header-section-number">8.4.2.2</span> 长战斗<a href="爆破系.html#长战斗-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>（组队必带路障，碾碎器和碎骨魔挑一个）
 保持远程牵制和侧闪反击，不放重击，反复围绕S3输出是最省心的。面对猩猩更要攒着S3，等对方重击瞬间再放。</p>
 </div>
@@ -442,12 +443,12 @@
 </div>
 <div id="推荐打法-46" class="section level3 hasAnchor" number="8.5.2">
 <h3><span class="header-section-number">8.5.2</span> 推荐打法<a href="爆破系.html#推荐打法-46" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-42" class="section level4 hasAnchor" number="8.5.2.1">
-<h4><span class="header-section-number">8.5.2.1</span> 短战斗<a href="爆破系.html#短战斗-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-43" class="section level4 hasAnchor" number="8.5.2.1">
+<h4><span class="header-section-number">8.5.2.1</span> 短战斗<a href="爆破系.html#短战斗-43" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>近战缠斗配合四连一撞，先攒两格多气，S2打晕后点五枪再冲上去打五连跟S1，再重击撞晕，快速结束战斗。</p>
 </div>
-<div id="长战斗-42" class="section level4 hasAnchor" number="8.5.2.2">
-<h4><span class="header-section-number">8.5.2.2</span> 长战斗<a href="爆破系.html#长战斗-42" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-43" class="section level4 hasAnchor" number="8.5.2.2">
+<h4><span class="header-section-number">8.5.2.2</span> 长战斗<a href="爆破系.html#长战斗-43" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>加强远程牵制与侧闪反击，其余参考短战斗，就是注意别打红。想要加速战斗，也可尝试S3后的降抗。</p>
 </div>
 </div>
@@ -495,12 +496,12 @@
 </div>
 <div id="推荐打法-47" class="section level3 hasAnchor" number="8.6.2">
 <h3><span class="header-section-number">8.6.2</span> 推荐打法<a href="爆破系.html#推荐打法-47" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<div id="短战斗-43" class="section level4 hasAnchor" number="8.6.2.1">
-<h4><span class="header-section-number">8.6.2.1</span> 短战斗<a href="爆破系.html#短战斗-43" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-44" class="section level4 hasAnchor" number="8.6.2.1">
+<h4><span class="header-section-number">8.6.2.1</span> 短战斗<a href="爆破系.html#短战斗-44" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>先不用着急充能，近战缠斗四连一重配合压起身攒到气之后再充能。输出方式可以是S1搏撞晕后补两发重击，或者直接S2，同战力的敌人一般吃不到第二个S2。</p>
 </div>
-<div id="长战斗-43" class="section level4 hasAnchor" number="8.6.2.2">
-<h4><span class="header-section-number">8.6.2.2</span> 长战斗<a href="爆破系.html#长战斗-43" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-44" class="section level4 hasAnchor" number="8.6.2.2">
+<h4><span class="header-section-number">8.6.2.2</span> 长战斗<a href="爆破系.html#长战斗-44" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>利用充能后的重炮黑暗燃烧在远程牵制中先打输出并攒气，S2和S3都可使用，原则就是如果连击到2格气时有30层就放S2，没有的话不用急，回去充能放风筝，到S3再直接使用。触发招牌时不要过于头脑发热凭霸体去莽干，只当是给自己加气就好。</p>
 </div>
 </div>
@@ -527,17 +528,21 @@
 <li>不朽遗迹（白球）在10%时触发，触发后阻止一切伤害8秒。换句话说保存遗迹加身的震天尊是不可能被任何攻击秒掉的，要在10%血之外秒掉震天尊只能等黄球。</li>
 <li>重击100%出黑暗燃烧，虽然伤害比惊破天的重击小了100%，但胜在触发率高，打各种硬皮对手不吃亏。</li>
 <li>S1概率破甲，如果有黄球则100%偷气给自己。</li>
-<li>S2概率击晕，如果有蓝球则100%偷血给自己。虽然在S2的时候没有攻击加成，但是彼消此长的血量让这一招成为了游戏中最超值的S2。偷血不但无视任何减伤，而且根本不管对方还有没有这么多血可偷！</li>
+<li>S2概率击晕，如果有蓝球则100%偷血给自己。虽然在S2的时候没有攻击加成，但是彼消此长的血量让这一招成为了游戏中最超值的S2，也是震天尊最主要的输出方式。偷血不但无视任何减伤，而且根本不管对方还有没有这么多血可偷！</li>
 </ul>
 <p>（注意：在震天尊特殊事件中的震天尊Boss拥有更变态的混沌遗迹和战争遗迹，这些没有给到玩家版的震天尊）</p>
 </div>
 <div id="招牌-47" class="section level4 hasAnchor" number="8.7.1.2">
 <h4><span class="header-section-number">8.7.1.2</span> 招牌<a href="爆破系.html#招牌-47" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>顺从遗迹（红球），充满一格气概率触发，阻止对手触发增益与减益。即使没有红球，觉醒震天尊平时也会将对方的增益减益效果降低。一个明显的例子就是盟战2厅1线能量启动模块，平时开场给1格气，觉醒震天尊上去开场给不到1格。红球能有效地阻止科技系等的减伤手段，让震天尊的输出更加残暴，也能有效降低DOT机器人的输出，可谓攻守兼备。5觉醒概率15%，100觉醒65%。由于是被动触发，所以倒也不能刻意追求。</p>
+<p>顺从遗迹（红球），充满一格气概率触发，阻止对手触发增益与减益。即使没有红球，觉醒震天尊平时也会将对方的增益减益效果降低。一个明显的例子就是“能量启动”模块<a href="#fn9" class="footnote-ref" id="fnref9"><sup>9</sup></a>，平时开场给1格气，觉醒震天尊上去开场给不到1格。</p>
+<p>起先我对这个招牌是不太推荐砸升级程序进去的，因为我觉得5觉醒概率15%，100觉醒65%。由于是被动触发，所以不能刻意追求。但后来卡邦经常给Boss级人物加一堆变态的模块，让人找不到最优解的机器人，这时，震天尊只要出了红球，对方就“乖”了。不过还是要注意，震天尊的红球是“让你的技能出不来”，但是红球出来的时候已经存在的技能，<strong>比如说规避</strong>，还是会触发的，所以别以为震天尊用红球就能克住大、小黄蜂的规避。</p>
 </div>
 <div id="协同-47" class="section level4 hasAnchor" number="8.7.1.3">
 <h4><span class="header-section-number">8.7.1.3</span> 协同<a href="爆破系.html#协同-47" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>搭配两个威震天之一，让队中所有霸天虎在面对霸天虎时加护甲，面对汽车人时加能量效率。</p>
+<ul>
+<li>战威，爆威：，让队中所有霸天虎在面对霸天虎时加护甲，面对汽车人时加能量效率。</li>
+<li>亡灵天尊：震天尊能量比对手多时，+2~5%的暴击率。可以说是补回了震天尊之前被削弱的伤害。</li>
+</ul>
 </div>
 <div id="短板-48" class="section level4 hasAnchor" number="8.7.1.4">
 <h4><span class="header-section-number">8.7.1.4</span> 短板<a href="爆破系.html#短板-48" class="anchor-section" aria-label="Anchor link to header"></a></h4>
@@ -545,18 +550,18 @@
 </div>
 <div id="调整-9" class="section level4 hasAnchor" number="8.7.1.5">
 <h4><span class="header-section-number">8.7.1.5</span> 8.0调整<a href="爆破系.html#调整-9" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>减少砍了2%血和4%攻。总的来说还是没有影响到震天尊的强大。</p>
+<p>砍了2%血和4%攻。总的来说还是没有影响到震天尊的强大。</p>
 </div>
 </div>
 <div id="推荐打法-48" class="section level3 hasAnchor" number="8.7.2">
 <h3><span class="header-section-number">8.7.2</span> 推荐打法<a href="爆破系.html#推荐打法-48" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>由于气来得比较慢，震天尊需要更多的耐心。遗迹的切换使他的S1偷气和S2偷血必须要在遗迹对齐之后才行。这个技巧也称“神力对齐”：上来第一个S1先放掉，接下来，每次获得S2的时候就能偷血。</p>
-<div id="短战斗-44" class="section level4 hasAnchor" number="8.7.2.1">
-<h4><span class="header-section-number">8.7.2.1</span> 短战斗<a href="爆破系.html#短战斗-44" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>由于气来得比较慢，震天尊需要更多的耐心。遗迹的切换使他的S1偷气和S2偷血必须要在遗迹和S技一致时才行。这个技巧也称“神力对齐”：上来第一个S1先放掉，接下来，每次获得S2的时候就能偷血。</p>
+<div id="短战斗-45" class="section level4 hasAnchor" number="8.7.2.1">
+<h4><span class="header-section-number">8.7.2.1</span> 短战斗<a href="爆破系.html#短战斗-45" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>上场之后利用狂怒遗迹的加成打四连重击搏命中，用黑暗燃烧迅速削减对手的体力。第一个S1出来后给对方破甲，这样可以弥补切换到保存遗迹时输出的降低。另一种方法是远程放风筝，一路攒到S3带走。</p>
 </div>
-<div id="长战斗-44" class="section level4 hasAnchor" number="8.7.2.2">
-<h4><span class="header-section-number">8.7.2.2</span> 长战斗<a href="爆破系.html#长战斗-44" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-45" class="section level4 hasAnchor" number="8.7.2.2">
+<h4><span class="header-section-number">8.7.2.2</span> 长战斗<a href="爆破系.html#长战斗-45" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>放风筝和侧闪反击为主，先完成神力对齐后围绕S2打输出保续航。如果对方气比较难控，快要红了，也要考虑S1的偷气，但这样就需要频繁的关注自己是否处于对齐状态，可以通过暂停来确认。</p>
 </div>
 </div>
@@ -592,7 +597,7 @@
 <p>特殊技：</p>
 <ul>
 <li>S1是震荡波S1的动作：刷新所有的玻璃瓦斯减益；施加一层永久玻璃瓦斯减益。</li>
-<li>S2是铁皮的动作：如果敌人有3层或更多的玻璃瓦斯减益，提升本次特殊攻击10%的伤害； 如果敌人有10层或更多的玻璃瓦斯减益，则最后一击不可防御——由于飞过山的S2是铁皮S2的效果，所以理论上在闪躲对方S2的时候还是要小心，不过……你真的会被对方的飞过山施加10层减益？</li>
+<li>S2是铁皮的动作：如果敌人有3层或更多的玻璃瓦斯减益，提升本次特殊攻击10%的伤害；如果敌人有10层或更多的玻璃瓦斯减益，则最后一击不可防御</li>
 <li>S3是救护车的动作：施加5层玻璃瓦斯减益，所有的玻璃瓦斯减益变为永久性，最后一击加70%的暴击率。看上去这可以配合小枪来锁定很多层减益，但实际使用的过程中发现，整个S3动画的过程中，普通玻璃瓦斯减益的过期时间不停止（就像惊破天修正之前），S3动画演完，全都过期了！<strong>后经修复，在S3过程中只过期一层。</strong></li>
 </ul>
 </div>
@@ -603,40 +608,50 @@
 <li>如果对手开场先击中飞过山，飞过山获得5~15%的永久性远程射速提升</li>
 <li>上述两种增益如果被驱散，10秒会重新激活</li>
 </ul>
-<p>看不出有什么特别的作用，黄蜂半血加50%的射速才能射得比较舒服，满觉醒才加15%的射速有什么用？不过还是那句话，大部分人不缺觉醒程序，会毫不犹豫地觉醒他。但是爆破系的招牌升级程序，可能还是先给震天尊比较合适。</p>
+<p>暴击率的加成很重要，因为飞过山也是要仰仗暴击的伤害来保证输出的，所以肯定是先打中对方比较合适；那什么场景会让玩家“主动”让电脑先击中自己来提升射速呢？对比一下黄蜂半血加50%的射速才能让小枪命中率高一点，满觉醒才加15%的射速有什么用？</p>
+<p>如果你已经有多余的泰坦货币去买飞过山，我相信一定也有爆破系的觉醒程序给飞过山。但综合来看，飞过山觉醒1就够了，爆破的招牌升级程序，还是先给震天尊等人比较合适。</p>
 </div>
 <div id="协同-48" class="section level4 hasAnchor" number="8.8.1.3">
 <h4><span class="header-section-number">8.8.1.3</span> 协同<a href="爆破系.html#协同-48" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <ul>
 <li>爵士（双向），提升3~5%的能量功率</li>
 <li>幻影（双向），2~8%护甲加成</li>
-<li>反冲、汽车大师（授益）：2~8%攻击加成</li>
-<li>雷震（受益）：2~8%攻击加成</li>
-<li>5星领袖协同：所有低星等机器人获得10%的特殊伤害加成</li>
+<li>雷震：2~8%攻击加成</li>
 </ul>
 </div>
 <div id="短板-49" class="section level4 hasAnchor" number="8.8.1.4">
 <h4><span class="header-section-number">8.8.1.4</span> 短板<a href="爆破系.html#短板-49" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>比起爆破系的大部分角色，飞过山基础的伤害很一般，要练好是比较费心思的。</p>
+<p>从技能间的配合上来看，飞过山很显然是要通过施加大量的玻璃瓦斯，并且用S3给锁成永久的之后，才能把暴击伤害提升上来，然后靠S2来追求输出，但这已经要求攒出5格气了，一般战斗没这么长。同系人物中铁皮攒到两格气，惊破天三格气基本上可以结束战斗了。飞过山在爆破系中难道要跟搅拌者和爆威比比谁更能憋？</p>
+<p>每次增益被驱散时获得远程伤害也是奇葩的设计，这看着像是设计出来在面对红蜘蛛的时候，想要放S2前先让对方驱散一下自己的Buff再放？</p>
 </div>
 </div>
 <div id="推荐打法-49" class="section level3 hasAnchor" number="8.8.2">
 <h3><span class="header-section-number">8.8.2</span> 推荐打法<a href="爆破系.html#推荐打法-49" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>由于本人已经弃坑，目前时间也有限，尚未详细上手这个角色。但是从描述上来看，飞过山并没有什么亮眼的地方。</p>
-<p>他的核心技能与热破、路障、录音机类似，都是要通过小枪来施加减益，提升自己的伤害，但是降低格挡熟练度这种鸡肋的能力，难道是要鼓励屈防磨血吗？</p>
-<p>从技能间的配合上来看，很显然是要通过施加大量的玻璃瓦斯，并且用S3给锁成永久的之后，才能把暴击伤害提升上来，然后靠S2来追求输出，但这已经要求攒出5格气了，一般战斗没这么长。同系人物中铁皮攒到两格气，惊破天三格气基本上可以结束战斗了。飞过山在爆破系中难道要跟搅拌者和爆威比比谁更能憋？</p>
-<p>每次增益被驱散时获得远程伤害也是奇葩的设计，这看着像是设计好要对战红蜘蛛，想要放S2前先让对方驱散一下自己的Buff再放？</p>
-<div id="短战斗-45" class="section level4 hasAnchor" number="8.8.2.1">
-<h4><span class="header-section-number">8.8.2.1</span> 短战斗<a href="爆破系.html#短战斗-45" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="短战斗-46" class="section level4 hasAnchor" number="8.8.2.1">
+<h4><span class="header-section-number">8.8.2.1</span> 短战斗<a href="爆破系.html#短战斗-46" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>短战斗就不要想太多玻璃瓦斯的堆积了，直接围绕近战来攒气，用S2打输出。</p>
 </div>
-<div id="长战斗-45" class="section level4 hasAnchor" number="8.8.2.2">
-<h4><span class="header-section-number">8.8.2.2</span> 长战斗<a href="爆破系.html#长战斗-45" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<div id="长战斗-46" class="section level4 hasAnchor" number="8.8.2.2">
+<h4><span class="header-section-number">8.8.2.2</span> 长战斗<a href="爆破系.html#长战斗-46" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>玩家非要开发飞过山，只能像搅拌者一样后期发力，开局就走远程放风筝的思路堆积和刷新玻璃瓦斯，直到第一个S3出来锁定相当数量的玻璃瓦斯，如果战斗更长，则上述操作再弄一次，等你对玻璃瓦斯的数量满意后，就围绕S2来打伤害。</p>
+<p>相比爆威削弱充能的和搅拌者5秒一buff，飞过山的玻璃瓦斯不是消耗性的资源，不会因为出大招而减为0，所以在长战斗中是会慢慢绽放的。</p>
+<p>然而我实际操作了一下，把飞过山的玻璃瓦斯堆到了58层<a href="#fn10" class="footnote-ref" id="fnref10"><sup>10</sup></a>，试了试S2，出暴击的话最后一击可以打出11000，不出暴击只有1000多，长战斗的思路是没错的。问题就是——暴击率实在太低！S2的5次攻击，大部分时候也就出1~2次暴击，最伤人的最后一下往往没暴击。这就回去要求把招牌等级提高，费一大堆招牌才能把他堆到有伤害，何必呢？</p>
 </div>
 </div>
 <div id="基地防守-48" class="section level3 hasAnchor" number="8.8.3">
 <h3><span class="header-section-number">8.8.3</span> 基地防守<a href="爆破系.html#基地防守-48" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>我如果说飞过山非常适合防守，一定会有很多人不相信。其实我是想说飞过山非常适合放基地挖黄金，因为一般找不到他上场的机会。放基地的话配什么模块都是白给，可以给突袭你的人留下一个好口碑。</p>
 
 </div>
 </div>
+</div>
+<div class="footnotes">
+<hr />
+<ol start="9">
+<li id="fn9"><p>在一张旧的盟战地图中有，现在已经很少见到<a href="爆破系.html#fnref9" class="footnote-back">↩︎</a></p></li>
+<li id="fn10"><p>理论上应该可以堆到99层<a href="爆破系.html#fnref10" class="footnote-back">↩︎</a></p></li>
+</ol>
 </div>
             </section>
 
